--- a/_posts/2009-8-30-0-01100.md
+++ b/_posts/2009-8-30-0-01100.md
@@ -504,7 +504,7 @@ tag: [normal]
 
 25、林深河（深河），现任武器设计局负责人、陆军第三营某步兵连连长，将来任军工生产部部长
 
-26、李一挝（ssfire），现任机械工业部成员、第一武器设计小组成员，历任机械组成员
+26、[李一挝][y006]（ssfire），现任机械工业部成员、第一武器设计小组成员，历任机械组成员
 
 27、徐营捷（金山独霸），现任兵器组成员（负责炸药），历任化工组成员、化工部成员
 
@@ -2956,7 +2956,7 @@ ID不明的穿越者（如有知情者请补充）
 
 16、李赤骑（表哥）、张雨（表妹）
 
-17、李一挝（男友）、李元元（女友）
+17、[李一挝][y006]（男友）、李元元（女友）
 
 18、丁丁（男友）、潘潘（女友）
 
@@ -3445,3 +3445,4 @@ ID不明的穿越者（如有知情者请补充）
 [y003]: /characters/y003 "王洛宾"
 [y004]: /characters/y004 "展无涯"
 [y005]: /characters/y005 "马千瞩"
+[y006]: /characters/y006 "李一挝"
