--- a/_posts/2010-4-20-3-00200.md
+++ b/_posts/2010-4-20-3-00200.md
@@ -66,7 +66,7 @@ tag: [normal]
 
 　　“你们不知道这个体系一旦建立对工业有多大的促进作用。机械工业可以根据各种不同的产品需求制造出不同的专用机床！组合式自动机床！”[王洛宾][y003]兴奋的说，“知道什么叫大工业么？有了这个体系，我们就有真正的大工业了。”
 
-　　“打个比方吧，”造过黑枪的李一挝解释道：“大家现在都很担心子弹供应的问题，其实要制造子弹并不算难事，我到机械厂用现有的设备造就能造出来，但是这么造，一天也造不出几十发来，你们一搂扳机就没了。如果我们制造一套子弹生产线，虽然要制造三十多台设备组成，却能一小时制造几千发子弹，这个生产率就高得可怕了。”
+　　“打个比方吧，”造过黑枪的[李一挝][y006]解释道：“大家现在都很担心子弹供应的问题，其实要制造子弹并不算难事，我到机械厂用现有的设备造就能造出来，但是这么造，一天也造不出几十发来，你们一搂扳机就没了。如果我们制造一套子弹生产线，虽然要制造三十多台设备组成，却能一小时制造几千发子弹，这个生产率就高得可怕了。”
 
 　　“能做K98吗？”魏爱文问。
 
@@ -103,3 +103,4 @@ tag: [normal]
 [y003]: /characters/y003 "王洛宾"
 [y004]: /characters/y004 "展无涯"
 [y005]: /characters/y005 "马千瞩"
+[y006]: /characters/y006 "李一挝"
