--- a/_posts/2011-11-28-4-20700.md
+++ b/_posts/2011-11-28-4-20700.md
@@ -30,7 +30,7 @@ tag: [normal]
 
 　　几个男人下到舱里，先简单地转了一下，然后来到了底舱。这里做了简单的间隔现在是复装工场。洗弹壳的振动锅，自动火药分装机，给弹壳整型和加装弹头的工具都装固定在台钳上，另外去底火的工具和精细天平也都放在一边。
 
-　　这些东西在不久前曾经出借过一段时间供机械组仿制——毕竟专业设备比非法造枪的李一挝带来的自制工具要专业多了。仿制结束之后科技部征购了一套作为STC储备，其他又归还给了他们，还顺带附送了一套本地的仿制品。
+　　这些东西在不久前曾经出借过一段时间供机械组仿制——毕竟专业设备比非法造枪的[李一挝][y006]带来的自制工具要专业多了。仿制结束之后科技部征购了一套作为STC储备，其他又归还给了他们，还顺带附送了一套本地的仿制品。
 
 　　几个北美客本来就有基本两套复装工具，穿越前又将装备升级，配备了几乎所有常用口径复装的模具，大批各种弹头、底火和装药。加起来足能复装几万发各种子弹，大多是集团制式装备以外的口径。
 
@@ -77,3 +77,4 @@ tag: [normal]
 　　“说到莫辛纳干，我们也带了些。这玩意的最大特点就是便宜，枪和子弹都便宜。要不是飞云号吨位有限，弄个三千支水连珠来组建一个团，还不立马横扫天下。”钱水协颇为遗憾地说道。拿了一支莫辛给北炜。
 
 　　北炜还是第一次把这支颇有名气的步枪握在手中。过去他只有一次在人武部仓库里见到一堆用铁链拴在枪柜里的五花八门的步枪里见识过这种在中国现代史上经常露脸的武器。
+[y006]: /characters/y006 "李一挝"
