--- a/_posts/2012-8-5-5-22100.md
+++ b/_posts/2012-8-5-5-22100.md
@@ -34,7 +34,7 @@ tag: [normal]
 
 　　所有的小组出动之后，叶孟言小组最后一个出发。他穿上热带版的BDU——这可是真正的美军军款，不是队员们穿得国产民版。当初陈思根自己带了好几套，给每个元老分队长都送了一套。
 
-　　他穿上靴子，背好装具。把一支托卡列夫T33塞进了腰间的枪套，别看叶孟言过去只是个高中生，他对武器可是很有追求的，Glock17之类手枪被他认为太“娘”——拿个塑料手枪算什么？但是他最心仪的M1911在元老中间是稀罕玩意，没人肯给他。除非他愿意尝试李一挝的黑枪手艺。最后还是从钱水廷那里才算弄了一支男人气概的手枪。
+　　他穿上靴子，背好装具。把一支托卡列夫T33塞进了腰间的枪套，别看叶孟言过去只是个高中生，他对武器可是很有追求的，Glock17之类手枪被他认为太“娘”——拿个塑料手枪算什么？但是他最心仪的M1911在元老中间是稀罕玩意，没人肯给他。除非他愿意尝试[李一挝][y006]的黑枪手艺。最后还是从钱水廷那里才算弄了一支男人气概的手枪。
 
 　　接着他从床后面拿出了为了这次任务带来的步枪。步枪装在一个褐色的防水枪套里。他把枪从枪套中拿了出来仔细的检查了一番，这是一支北美分舵贡献给特侦队司令部的瑞士制造的K31直栓步枪，这种高精度步枪加上瞄准镜之后可以胜任1000米之内的狙击任务。
 
@@ -87,3 +87,4 @@ tag: [normal]
 　　除了他自己之外，整个马家寨外面还有三个狙击小组以备不时之用，视情况投入战斗。
 
 　　时间一分一秒地向着11：00靠近。叶孟言终于在视线中看到了道长乘坐的轿子。
+[y006]: /characters/y006 "李一挝"
