--- a/_posts/2013-11-20-6-22100.md
+++ b/_posts/2013-11-20-6-22100.md
@@ -26,9 +26,9 @@ tag: [normal]
 
 　　‘就这四个。别嫌少，都是六队里一等一的棒小伙。必要的话，你可以带着他们攻下马尼拉的全部要塞。”特侦队新组建的第六分队侧重于水上侦察、两栖渗透作战，被视为临高版的SBS。负责提供训练支援的海军和海兵队都对这支力量眼红得要命。特别是石志奇，已经几次放话要搞出海兵自己的海豹突击队来。
 
-　　魏斯向特侦队员要了一支冲锋枪来细致端详。从鲭鱼号上捞出来“蝎子”已经在白羽和李一挝手中被魔改得面目全非，钢管制成，附有古波塔胶垫的伸缩式枪托取代了原装折叠托，自制的枪口消焰防跳器让枪管看来似乎长了一截。弹匣前边赫然又伸出一个前握把，还连着一截圆筒，仔细一看，那居然是用激光笔改装的目标指示器。
+　　魏斯向特侦队员要了一支冲锋枪来细致端详。从鲭鱼号上捞出来“蝎子”已经在白羽和[李一挝][y006]手中被魔改得面目全非，钢管制成，附有古波塔胶垫的伸缩式枪托取代了原装折叠托，自制的枪口消焰防跳器让枪管看来似乎长了一截。弹匣前边赫然又伸出一个前握把，还连着一截圆筒，仔细一看，那居然是用激光笔改装的目标指示器。
 
-　　“这些中国人工程师拿自动武器当乐高玩具么？”魏斯从包装箱中找出自己惯用的那支“蝎子”，很幸运还没受到李一挝的毒手，他更信赖原装的钢丝折叠肩托和消声器。
+　　“这些中国人工程师拿自动武器当乐高玩具么？”魏斯从包装箱中找出自己惯用的那支“蝎子”，很幸运还没受到[李一挝][y006]的毒手，他更信赖原装的钢丝折叠肩托和消声器。
 
 　　“他们能干的超出你的想象。”薛子良说：“机械口的那几个武器狂人正在研究改造MGV-176的枪管和弹盘为了适用威力更大的帕拉贝鲁姆手枪弹。”尽管．22r枪弹已经可以装填黑火药复装生产，MGV-176冲锋枪却因威力过小而不大受欢迎。新鲜劲过了之后军事口的元老们都没了兴趣，除了少量装备特侦队和用于训练以外，更多的都在高山岭的库房里睡大觉。
 
@@ -79,3 +79,4 @@ tag: [normal]
 　　“射速能有多快？”
 
 　　“将近每分钟一百发，前提是你的胳膊够有力气。”薛子良比划着，“这是理论速度。这东西是以哈乞开斯手动转管炮为蓝本开发的，相比历史上的原型，口径由37毫米缩小为32毫米，身管增长到25倍径。”
+[y006]: /characters/y006 "李一挝"
