--- a/_posts/2013-3-18-5-44600.md
+++ b/_posts/2013-3-18-5-44600.md
@@ -68,7 +68,7 @@ tag: [normal]
 
 　　第一波的五个队员是使用蝎子冲锋枪和霰弹枪的特侦队员，还有一个M240机枪组在平台上压阵。最后，是一个能说西班牙语的阿三水手——充当翻译。
 
-　　第二波在甲板上待命，他们都是海兵队中选拔的精锐，每人在胸前十字花插着4支1630式左轮手枪，手里拿着短管米尼步枪或者“两连发”——李一挝自己制造的霰弹枪，因为缺少合格的击发弹簧，他就采用了这种双管构造火帽击发的霰弹枪，左右管可分别击发。
+　　第二波在甲板上待命，他们都是海兵队中选拔的精锐，每人在胸前十字花插着4支1630式左轮手枪，手里拿着短管米尼步枪或者“两连发”——[李一挝][y006]自己制造的霰弹枪，因为缺少合格的击发弹簧，他就采用了这种双管构造火帽击发的霰弹枪，左右管可分别击发。
 
 　　两船愈来愈近，周韦森的心也提到了嗓子眼，登船平台有钢板的围栏，足以抵挡火绳枪、燧发枪和1磅甲板炮发射的各种弹丸，但是等登船平台的跳板门一打开，他们就彻底暴露在敌火下了。只有祈祷桅盘和甲板上的机枪手和狙击手能够眼明手快。
 
@@ -97,3 +97,4 @@ tag: [normal]
 　　“破门！”周韦森一声招呼，一个特侦队员举起霰弹枪轰开舱门，另一个特侦队员动作敏捷的丢进一颗辣椒催泪弹，“呯”的一声炸开了。
 
 　　“不要丢炸弹！我们投降！”舱门里传来了西班牙语的哀嚎，接着是一阵剧烈的咳嗽和喷嚏的声音。
+[y006]: /characters/y006 "李一挝"
