--- a/_posts/2009-9-14-1-01400.md
+++ b/_posts/2009-9-14-1-01400.md
@@ -46,9 +46,9 @@ tag: [normal]
 
 　　最经一下多了好几十陌生面孔，[萧子山][y001]都不认得了，这位女性身材瘦瘦小小的，算不上漂亮，看得出肢体灵活，是个爱好体育的女性。
 
-　　“我是李一挝的女朋友，叫李元元。我过去当文秘的，做会议记录小菜一碟。”
+　　“我是[李一挝][y006]的女朋友，叫李元元。我过去当文秘的，做会议记录小菜一碟。”
 
-　　这个李一挝[萧子山][y001]是知道的，也是学机加工的，一个狂热的枪械爱好者，[展无涯][y004]的枪友，属于半天都没个闷屁的人物。[萧子山][y001]猜他之所以想穿越只不过是为了不受限制的造枪而已。
+　　这个[李一挝][y006][萧子山][y001]是知道的，也是学机加工的，一个狂热的枪械爱好者，[展无涯][y004]的枪友，属于半天都没个闷屁的人物。[萧子山][y001]猜他之所以想穿越只不过是为了不受限制的造枪而已。
 
 　　这个年轻的女孩子也跟着他来了，“爱你就跟你到天涯海角”看来并不是一句空话。想到这里，[萧子山][y001]不由得酸溜溜的。
 
@@ -134,3 +134,4 @@ tag: [normal]
 [y003]: /characters/y003 "王洛宾"
 [y004]: /characters/y004 "展无涯"
 [y005]: /characters/y005 "马千瞩"
+[y006]: /characters/y006 "李一挝"
