--- a/_posts/2011-4-22-3-36900.md
+++ b/_posts/2011-4-22-3-36900.md
@@ -12,29 +12,29 @@ tag: [normal]
 
 　　于是这个问题就交给了第一武器设计小组——第一小组专门设计“现代武器”，和以复古流为主体的第二设计小组不同。
 
-　　第一武器小组的主要战力就是李一挝了。这个平日里很少说话的，身材圆滚滚的男人是机加工方面的好手，不但会做钳工，对其他机床应用也很熟练老到。这种手艺促成了李一挝的副业，他过去时常偷偷的非法造枪，仿制64式这样的自由枪机的小手枪对他来说是小菜一碟。据他说自己造过手枪、霰弹枪和步枪，为了表明他不是吹牛，在随身行李里带了两支他自己的作品，一支9mm马卡洛夫/59式和一支M1911式。
+　　第一武器小组的主要战力就是[李一挝][y006]了。这个平日里很少说话的，身材圆滚滚的男人是机加工方面的好手，不但会做钳工，对其他机床应用也很熟练老到。这种手艺促成了[李一挝][y006]的副业，他过去时常偷偷的非法造枪，仿制64式这样的自由枪机的小手枪对他来说是小菜一碟。据他说自己造过手枪、霰弹枪和步枪，为了表明他不是吹牛，在随身行李里带了两支他自己的作品，一支9mm马卡洛夫/59式和一支M1911式。
 
-　　李一挝向组织捐献了自己的全套造枪工具和许多自己攒得专用设备，有了这套玩意，只要能找到大致合用的钢材，造支AK也不算太难——当然不能和正规工厂里出来的AK相提并论。唯一的问题是子弹难造，他很谦虚的表示自己只会复装。
+　　[李一挝][y006]向组织捐献了自己的全套造枪工具和许多自己攒得专用设备，有了这套玩意，只要能找到大致合用的钢材，造支AK也不算太难——当然不能和正规工厂里出来的AK相提并论。唯一的问题是子弹难造，他很谦虚的表示自己只会复装。
 
-　　李一挝最初干这行与其说是为了赚钱不如说是一种兴趣——一种爱好武器又有动手能力的人常会干得事情，但是兴趣一旦有了利润作为支撑，他对技术的钻研也就愈发起劲了，制造出来得东西也愈来愈大胆，从单纯的仿制简陋的小砸炮到像模像样的仿制起各种著名的手枪来了。如果没有虫洞的话，李一挝的下场是可想而知的，他的老婆李元元说：他们参加穿越实在是迫不得已的成分居多。
+　　[李一挝][y006]最初干这行与其说是为了赚钱不如说是一种兴趣——一种爱好武器又有动手能力的人常会干得事情，但是兴趣一旦有了利润作为支撑，他对技术的钻研也就愈发起劲了，制造出来得东西也愈来愈大胆，从单纯的仿制简陋的小砸炮到像模像样的仿制起各种著名的手枪来了。如果没有虫洞的话，[李一挝][y006]的下场是可想而知的，他的老婆李元元说：他们参加穿越实在是迫不得已的成分居多。
 
-　　在临高他们两口子过得很愉快，老婆在执委会当办事员，他自己终于可以正大光明的造枪了——能够在阳光下造枪并且大模大样的和人讨论自己的作品，这种快乐是李一挝过去不曾享受过得。
+　　在临高他们两口子过得很愉快，老婆在执委会当办事员，他自己终于可以正大光明的造枪了——能够在阳光下造枪并且大模大样的和人讨论自己的作品，这种快乐是[李一挝][y006]过去不曾享受过得。
 
-　　但是李一挝并没有找到多少发挥的机会。穿越者的军火库相当充实，步枪、手枪、霰弹枪一应俱全，暂时还不需要他的自制枪械。大家对他的手艺赞不绝口，但是谁也不想亲手去使用那些不合格的本地钢材制造出来的枪支，至于给土著制造的米尼步枪，那是工业化批量制造的产物，不需要他出什么力——[展无涯][y004]等人在另一个时空就准备了全套的生产米尼步枪所需的工装设备。
+　　但是[李一挝][y006]并没有找到多少发挥的机会。穿越者的军火库相当充实，步枪、手枪、霰弹枪一应俱全，暂时还不需要他的自制枪械。大家对他的手艺赞不绝口，但是谁也不想亲手去使用那些不合格的本地钢材制造出来的枪支，至于给土著制造的米尼步枪，那是工业化批量制造的产物，不需要他出什么力——[展无涯][y004]等人在另一个时空就准备了全套的生产米尼步枪所需的工装设备。
 
-　　于是李一挝在机械厂就专门负责轻武器弹药的制造——主要是为SKS步枪的7.62*54mm弹复装子弹——这种子弹在几次战斗中的消耗量很大。李一挝过去经常复装这种子弹，很熟悉而且专门搞了一套小型的专用设备，包括弹头模具和专用压机。
+　　于是[李一挝][y006]在机械厂就专门负责轻武器弹药的制造——主要是为SKS步枪的7.62*54mm弹复装子弹——这种子弹在几次战斗中的消耗量很大。[李一挝][y006]过去经常复装这种子弹，很熟悉而且专门搞了一套小型的专用设备，包括弹头模具和专用压机。
 
 　　被甲弹他是做不出来的——好在这里铅很充裕，就直接使用纯铅制造，火药是最好的高级细颗粒黑火药——不管化工部门如何的努力，硝化棉始终停留在制造油漆的水平上。
 
 　　但是现在的状况不是过去一次复装几发，十几发或者最多百来发，即使是平日里穿越众为了保持对武器的手感而进行的日常射击训练，结束之后拿来的弹壳至少也在二千个以上，这些弹壳要靠他一个个的复装，简直就是苦役。
 
-　　李一挝在[展无涯][y004]的支持下改进了设备，把原先适合他一个人偷偷摸摸使用的小型装备变成多个工人能够操作的流水线，这样他才有时间和精力来搞他的本业——轻武器制造上。
+　　[李一挝][y006]在[展无涯][y004]的支持下改进了设备，把原先适合他一个人偷偷摸摸使用的小型装备变成多个工人能够操作的流水线，这样他才有时间和精力来搞他的本业——轻武器制造上。
 
 　　他没有参与德林杰手枪的制造——这种简陋的武器他看不上眼。他把精力放在仿制军用12号口径霰弹枪上了，霰弹枪对子弹的要求很低，用不着金属弹壳。海军和特侦队对这种武器很感兴趣。
 
 　　仿制手枪的任务暂时打断了他对霰弹枪的研发工作，武器设计小组的成员从自己的岗位上汇聚到机械厂的办公室来，准备就这种“土著专用手枪”进行项目讨论。
 
-　　第一武器设计小组的灵魂人物是白羽，他不但是装甲兵军官，还是堂堂正正的兵器设计与工程设计专业出身。李一挝虽然有丰富的造枪经验，但是对怎么设计武器并且使之能够适应批量生产的经验很少——他一直是手工作坊式的制造。
+　　第一武器设计小组的灵魂人物是白羽，他不但是装甲兵军官，还是堂堂正正的兵器设计与工程设计专业出身。[李一挝][y006]虽然有丰富的造枪经验，但是对怎么设计武器并且使之能够适应批量生产的经验很少——他一直是手工作坊式的制造。
 
 　　接到任务书之后，设计小组的几个人一起琢磨了一下企划院下达的武器要求：
 
@@ -44,19 +44,19 @@ tag: [normal]
 
 　　手枪要易用好操作，安全可靠，性能不必很高，有效射程25米即可。
 
-　　“要满足这些要求，只有左轮手枪了。”李一挝看了之后说，“要不干脆就批量造13mm的‘单打一’，连枪管带弹药都和米尼步枪通用。”
+　　“要满足这些要求，只有左轮手枪了。”[李一挝][y006]看了之后说，“要不干脆就批量造13mm的‘单打一’，连枪管带弹药都和米尼步枪通用。”
 
 　　“‘单打一’就算了，打一发装一次，要么用来谋杀要么用来自杀。”白羽对这种简陋难看的武器一向很反感，第一小组的人都有同感。
 
 　　左轮手枪对材料要求低，采用击锤击发，不需要对材料和生产技术要求都很高的弹簧和击针，供弹方式简单可靠，又能提供一定的持续火力。
 
-　　“我们仿哪一种？韦伯利还是史密斯&韦森？”李一挝对世界上多数手枪的线图、结构图都了然在胸，如果有材料的话基本都能仿个八九不离十，当然性能无法同日而语，“要说性能还是韦伯利左轮要好些。”
+　　“我们仿哪一种？韦伯利还是史密斯&韦森？”[李一挝][y006]对世界上多数手枪的线图、结构图都了然在胸，如果有材料的话基本都能仿个八九不离十，当然性能无法同日而语，“要说性能还是韦伯利左轮要好些。”
 
 　　“还是史密斯&韦森吧。”王瑞相很喜欢这种手枪，虽然他在另一个时空从来就没见过一支S&W的手枪——哪怕是狗。但是他还是爱上了这种颇有浪漫主义色彩的武器。
 
 　　穿越者通过北美分舵采购的自卫用手枪里就有许多使用9mm派弹的S&W左轮手枪，大部分是4英寸枪管的。王瑞相搞了一支，再配上他从军品店搞来的仿版美国警察的左轮枪套和子弹带，一直挂在他的屁股上。
 
-　　“韦伯利左轮手枪装弹很快。”李一挝说。韦伯利左轮手枪通过向前推转轮座左后的支耳压销使握把低下来装子弹，然后套筒座和枪管闭合准备射击，排除弹壳时枪再一次打开，一个星形退壳器自动清除转轮中的弹壳。这是一种比摆出式转轮更快、更先进的装置，更适合使用快速装填器。
+　　“韦伯利左轮手枪装弹很快。”[李一挝][y006]说。韦伯利左轮手枪通过向前推转轮座左后的支耳压销使握把低下来装子弹，然后套筒座和枪管闭合准备射击，排除弹壳时枪再一次打开，一个星形退壳器自动清除转轮中的弹壳。这是一种比摆出式转轮更快、更先进的装置，更适合使用快速装填器。
 
 　　“材料怕是做不到，”白羽说。这种枪的结构复杂，重量偏大，所以对材料强度要求较高。“再说我们也没有金属弹壳可用，它的优点体现不出来。”
 
@@ -82,3 +82,4 @@ tag: [normal]
 
 　　“照我看来，现在的13mm米尼步枪都嫌口径过大，威力过剩，不过这是既成事实，一时半会改不了。”
 [y004]: /characters/y004 "展无涯"
+[y006]: /characters/y006 "李一挝"
