--- a/_posts/2011-4-23-3-37000.md
+++ b/_posts/2011-4-23-3-37000.md
@@ -12,19 +12,19 @@ tag: [normal]
 
 　　简化工艺的另一个设想是取消膛线——有人持这样的观点。新手枪既然只是土著简陋的自卫兵器，性能要求不高，干脆通过取消膛线省却了拉制膛线的工序。
 
-　　“这不行，”李一挝竭力反对，“取消膛线对枪支性能影响太大了！”
+　　“这不行，”[李一挝][y006]竭力反对，“取消膛线对枪支性能影响太大了！”
 
 　　没了膛线，手枪的射程和精度下降的太多了。多数人都反对这个简化——加工膛线对穿越集团来说不是多繁难的事情，而且现在已经制造拉膛线专用的设备，无非是更换一下刀头而已。
 
 　　“这样做延续性不好！”白羽坚决反对。要是采用滑膛，采用9mm派弹的尺寸就没有必要了。
 
-　　最后定出的方案保留了膛线，转轮为不可摆出的固定式，弹巢容量为六发。枪管长度为105mm，大致相当于4英寸枪管，如果需要也可以使用50mm或者155mm的枪管来应对不同的需求。配用的子弹上李一挝尝试了简单的定装弹，他把米尼弹头、黑火药和火帽组合成起来，装进一个标准的硬纸弹药筒里，组装完毕之后再用石蜡封装，就成了一发完整的子弹，可以完整的装入弹仓。
+　　最后定出的方案保留了膛线，转轮为不可摆出的固定式，弹巢容量为六发。枪管长度为105mm，大致相当于4英寸枪管，如果需要也可以使用50mm或者155mm的枪管来应对不同的需求。配用的子弹上[李一挝][y006]尝试了简单的定装弹，他把米尼弹头、黑火药和火帽组合成起来，装进一个标准的硬纸弹药筒里，组装完毕之后再用石蜡封装，就成了一发完整的子弹，可以完整的装入弹仓。
 
-　　这样的弹药在本时空是很难被土著仿制的。李一挝之所以强烈反对滑膛结构就是滑膛能够使用最简单的黑火药+圆铅弹，这样很容易被人模仿，但是火帽这东西土著是不可能制造出来的。
+　　这样的弹药在本时空是很难被土著仿制的。[李一挝][y006]之所以强烈反对滑膛结构就是滑膛能够使用最简单的黑火药+圆铅弹，这样很容易被人模仿，但是火帽这东西土著是不可能制造出来的。
 
 　　缺点自然是和所有纸制弹筒的武器一样，射击几次之后弹仓和枪管会变得很脏，必须时刻加以清理，对持有者的保养意识有很高的要求。
 
-　　第一支手枪是李一挝手工制造出来的，他把手枪进行了发蓝处理，以延长其使用寿命，随后进行了测试，证明这种克难版的左轮枪的威力令人满意：子弹能够击穿20米之外的铁甲，在50米之外依然保持有一定的杀伤力，精度也马马虎虎还过得去。
+　　第一支手枪是[李一挝][y006]手工制造出来的，他把手枪进行了发蓝处理，以延长其使用寿命，随后进行了测试，证明这种克难版的左轮枪的威力令人满意：子弹能够击穿20米之外的铁甲，在50米之外依然保持有一定的杀伤力，精度也马马虎虎还过得去。
 
 　　这种手枪很快被定型，正式型号为1630年式，简称“30式”，随即企划院批准将手枪投入了小规模量产。第一批3O式被分配到国家警察和政治保卫总局，而学员们将要练习使用的也正是这种手枪。
 
@@ -52,13 +52,13 @@ tag: [normal]
 
 　　薛子良先从如何正确的握枪开始教，然后再教他们正确的持枪方式。
 
-　　手枪连续使用了一周之后，李一挝亲自来对这批已经发射了大约一百发子弹的手枪进行测量，除了枪管略有膨胀之外一切正常，膛线的磨损情况远远小于预期——大概是用了纯铅弹头的缘故。
+　　手枪连续使用了一周之后，[李一挝][y006]亲自来对这批已经发射了大约一百发子弹的手枪进行测量，除了枪管略有膨胀之外一切正常，膛线的磨损情况远远小于预期——大概是用了纯铅弹头的缘故。
 
 　　枪擦拭的很干净，保养的相当好，这当然是薛子良不断咆哮和拳脚相交的结果。
 
 　　“这群小子，连擦枪的习惯都没有。”薛子良说，“打完丢下就想跑路了，我白教他们拆枪擦枪了。”
 
-　　“要是钢材质量再好些，枪管寿命还能更好。”李一挝不无遗憾的放下游标卡尺，“能用锻造法来造枪管，而不是拿无缝钢管凑数。”
+　　“要是钢材质量再好些，枪管寿命还能更好。”[李一挝][y006]不无遗憾的放下游标卡尺，“能用锻造法来造枪管，而不是拿无缝钢管凑数。”
 
 　　“我看足够了，身管寿命多少？”
 
@@ -99,3 +99,4 @@ tag: [normal]
 　　“一定要握得非常用力，但是手感舒服！”萨琳娜看着一个个憋着劲握枪的女学员们，“要握到你的手有点发抖，再稍稍松开一点！手腕一定要绷紧。”
 
 　　萨琳娜逐一检查了每个人的握枪状况，对握枪软绵绵的人，她会毫不客气的帮她握紧，谁也没想到这个红毛女人的力气这么大。陆橙觉得自己的手就要在她的铁掌和枪把之间挤碎了，忍不住叫了起来。
+[y006]: /characters/y006 "李一挝"
