--- a/_posts/2013-5-15-6-03200.md
+++ b/_posts/2013-5-15-6-03200.md
@@ -72,7 +72,7 @@ tag: [normal]
 
 　　预料中的巷战并没有发生，城内的郑军早已崩溃，留在城内的都是想借机烧杀奸淫的的散兵游勇。一见髡贼已经入城，一个个赶紧裹着抢来的细软匆忙逃走。
 
-　　吕泽扬全副武装，手里提着李一挝造得勃朗宁大威力手枪——造这枪的原料，从钢材到弹簧都是李一挝自己带来的旧时空的私货，否则吕元老还真不敢拿着当武器用——不紧不慢地跟在大部队后面走着，身旁是四五个精悍的士兵，紧紧地把他护在中央，颇有些“首长”的架势
+　　吕泽扬全副武装，手里提着[李一挝][y006]造得勃朗宁大威力手枪——造这枪的原料，从钢材到弹簧都是[李一挝][y006]自己带来的旧时空的私货，否则吕元老还真不敢拿着当武器用——不紧不慢地跟在大部队后面走着，身旁是四五个精悍的士兵，紧紧地把他护在中央，颇有些“首长”的架势
 
 　　“一排直插，前往凌云方向直接爬山！拿下制高点！”
 
@@ -85,3 +85,4 @@ tag: [normal]
 　　虽然抓杀了不少人，但是一路上都没有遇到像样的抵抗。溃兵们只是逃命而已。很快就到了衙署。衙署自从厦门岛落入郑氏集团之后就是郑芝龙在厦门岛的统治核心，他有一多半时间都在这里发号施令：经营贸易，围剿其他海上势力。这里必然有他的许多档案件和金银财宝。
 
 　　中左所衙署大堂上已经空无一人，各种仪仗礼器散乱不堪。部分房屋已经起了火。吕泽扬一面命令士兵灭火，拉警戒线，一面下令鼓楼击鼓，同时命人用扩音器命令城内牌甲到衙署报到——“一刻不到者即屠全甲！”
+[y006]: /characters/y006 "李一挝"
