--- a/_posts/2009-10-18-2-00100.md
+++ b/_posts/2009-10-18-2-00100.md
@@ -28,7 +28,7 @@ tag: [normal]
 
 　　不给大家熬稀饭本来也没什么：每个人都准备有二天分的干粮，只要保持淡水供应，啃啃那能量棒也能对付过去。
 
-　　问题是这田大妈一看到船上有厨房，居然不管三七二十一的就按老习惯做上早饭了，天还没亮，总务组的李元元带着几个女孩子给船楼里的执委会委员们端来了刚出锅的稀饭和蒸好的馒头，每人还有一小碟袋装咸菜和几颗油炸花生米。
+　　问题是这田大妈一看到船上有厨房，居然不管三七二十一的就按老习惯做上早饭了，天还没亮，总务组的[李元元][y007]带着几个女孩子给船楼里的执委会委员们端来了刚出锅的稀饭和蒸好的馒头，每人还有一小碟袋装咸菜和几颗油炸花生米。
 
 　　这下[马千瞩][y005]就知道麻烦了，群众就是不患寡而患不均的，凭什么你们领导都在吃热腾腾稀饭馒头，俺们群众要就着凉水啃那过期月饼馅一般味道的能量棒？这事业的一开头，就搞出差别待遇来，人心一散，队伍就不好带了。所以这会执委会喝粥都偷偷摸摸的，没人靠近舷窗。他摸起电话：“轮机舱吗？把制淡设备开到最大，要充分保证淡水供应！”
 
@@ -75,3 +75,4 @@ tag: [normal]
 　　侦察队因为依靠地图上的定位会有较大的误差——配备地图是虽然是最大比例的临高县地图、地形图。但是毕竟当中隔了四百年，很难说地形地貌的准确度有多少，纯属聊胜于无。因此北炜决定暂时不靠近海岸，直接朝向这里最显著的地形标记——临高角而去。
 [y001]: /characters/y001 "萧子山"
 [y005]: /characters/y005 "马千瞩"
+[y007]: /characters/y007 "李元元"
