--- a/_posts/2009-8-30-0-01100.md
+++ b/_posts/2009-8-30-0-01100.md
@@ -311,7 +311,7 @@ tag: [normal]
 
 4、明朗（kingwolf），现任办公厅组织处处长
 
-5、李元元（ssfire），现任不详，历任总务组成员（负责文书）
+5、[李元元][y007]（ssfire），现任不详，历任总务组成员（负责文书）
 
 6、田顺花（ID不详），现任不详，历任总务组成员（负责伙食）
 
@@ -2956,7 +2956,7 @@ ID不明的穿越者（如有知情者请补充）
 
 16、李赤骑（表哥）、张雨（表妹）
 
-17、[李一挝][y006]（男友）、李元元（女友）
+17、[李一挝][y006]（男友）、[李元元][y007]（女友）
 
 18、丁丁（男友）、潘潘（女友）
 
@@ -3446,3 +3446,4 @@ ID不明的穿越者（如有知情者请补充）
 [y004]: /characters/y004 "展无涯"
 [y005]: /characters/y005 "马千瞩"
 [y006]: /characters/y006 "李一挝"
+[y007]: /characters/y007 "李元元"
