--- a/_posts/2009-9-14-1-01400.md
+++ b/_posts/2009-9-14-1-01400.md
@@ -46,7 +46,7 @@ tag: [normal]
 
 　　最经一下多了好几十陌生面孔，[萧子山][y001]都不认得了，这位女性身材瘦瘦小小的，算不上漂亮，看得出肢体灵活，是个爱好体育的女性。
 
-　　“我是[李一挝][y006]的女朋友，叫李元元。我过去当文秘的，做会议记录小菜一碟。”
+　　“我是[李一挝][y006]的女朋友，叫[李元元][y007]。我过去当文秘的，做会议记录小菜一碟。”
 
 　　这个[李一挝][y006][萧子山][y001]是知道的，也是学机加工的，一个狂热的枪械爱好者，[展无涯][y004]的枪友，属于半天都没个闷屁的人物。[萧子山][y001]猜他之所以想穿越只不过是为了不受限制的造枪而已。
 
@@ -54,7 +54,7 @@ tag: [normal]
 
 　　“好，不过录音笔也开着好了。”
 
-　　李元元提来了一台上网本，随手键入了时间日期，然后转向[萧子山][y001]。
+　　[李元元][y007]提来了一台上网本，随手键入了时间日期，然后转向[萧子山][y001]。
 
 　　“请开始吧。”
 
@@ -135,3 +135,4 @@ tag: [normal]
 [y004]: /characters/y004 "展无涯"
 [y005]: /characters/y005 "马千瞩"
 [y006]: /characters/y006 "李一挝"
+[y007]: /characters/y007 "李元元"
