--- a/_posts/2009-9-17-1-01700.md
+++ b/_posts/2009-9-17-1-01700.md
@@ -16,7 +16,7 @@ tag: [normal]
 
 　　“我们这个总务组呢，说白了就管后勤的。”他扫视了一眼总务组的女生们：一共八个人，除了那位五十多的大妈，基本都是二十三四岁到三十的，只有一个才二十出头，不过看起来还比较主流。
 
-　　她们填写的个人登记表他是看过的，除了那位五十多岁的大妈填的是“家庭妇女”之外其他六个都曾经就职过，李元元是文秘，其他五个也都是类似的文职类工作。从事技术性工作的女性都分到了其他专业组去了，到总务组的，不用说都是没什么技能的女生。
+　　她们填写的个人登记表他是看过的，除了那位五十多岁的大妈填的是“家庭妇女”之外其他六个都曾经就职过，[李元元][y007]是文秘，其他五个也都是类似的文职类工作。从事技术性工作的女性都分到了其他专业组去了，到总务组的，不用说都是没什么技能的女生。
 
 　　也难怪这个总务组长的位置无人重视，这不等于就是“放牛班”么——换个好听的吧，就算是“庶务二课”。
 
@@ -118,7 +118,7 @@ tag: [normal]
 
 　　这点额外的福利让大家都比较满意。
 
-　　“李元元。”
+　　“[李元元][y007]。”
 
 　　“到！组长。”女孩子做出一个立正的姿势来。
 
@@ -136,5 +136,6 @@ tag: [normal]
 
 　　“没关系的，呵呵，有女人在，他们会比较注意自己的形象，不会搞得太邋遢。”
 
-　　短暂的半小时休息时间，[萧子山][y001]大体把总务组的各个环节都建立起来。采购：赵晓芹；食堂：田顺花；宿舍：方忆静；文秘：李元元。每个人配一名助手。[萧子山][y001]想，这样穿越之后，如何组织后勤也就有章可循了。
+　　短暂的半小时休息时间，[萧子山][y001]大体把总务组的各个环节都建立起来。采购：赵晓芹；食堂：田顺花；宿舍：方忆静；文秘：[李元元][y007]。每个人配一名助手。[萧子山][y001]想，这样穿越之后，如何组织后勤也就有章可循了。
 [y001]: /characters/y001 "萧子山"
+[y007]: /characters/y007 "李元元"
