--- a/_posts/2011-4-22-3-36900.md
+++ b/_posts/2011-4-22-3-36900.md
@@ -16,7 +16,7 @@ tag: [normal]
 
 　　[李一挝][y006]向组织捐献了自己的全套造枪工具和许多自己攒得专用设备，有了这套玩意，只要能找到大致合用的钢材，造支AK也不算太难——当然不能和正规工厂里出来的AK相提并论。唯一的问题是子弹难造，他很谦虚的表示自己只会复装。
 
-　　[李一挝][y006]最初干这行与其说是为了赚钱不如说是一种兴趣——一种爱好武器又有动手能力的人常会干得事情，但是兴趣一旦有了利润作为支撑，他对技术的钻研也就愈发起劲了，制造出来得东西也愈来愈大胆，从单纯的仿制简陋的小砸炮到像模像样的仿制起各种著名的手枪来了。如果没有虫洞的话，[李一挝][y006]的下场是可想而知的，他的老婆李元元说：他们参加穿越实在是迫不得已的成分居多。
+　　[李一挝][y006]最初干这行与其说是为了赚钱不如说是一种兴趣——一种爱好武器又有动手能力的人常会干得事情，但是兴趣一旦有了利润作为支撑，他对技术的钻研也就愈发起劲了，制造出来得东西也愈来愈大胆，从单纯的仿制简陋的小砸炮到像模像样的仿制起各种著名的手枪来了。如果没有虫洞的话，[李一挝][y006]的下场是可想而知的，他的老婆[李元元][y007]说：他们参加穿越实在是迫不得已的成分居多。
 
 　　在临高他们两口子过得很愉快，老婆在执委会当办事员，他自己终于可以正大光明的造枪了——能够在阳光下造枪并且大模大样的和人讨论自己的作品，这种快乐是[李一挝][y006]过去不曾享受过得。
 
@@ -83,3 +83,4 @@ tag: [normal]
 　　“照我看来，现在的13mm米尼步枪都嫌口径过大，威力过剩，不过这是既成事实，一时半会改不了。”
 [y004]: /characters/y004 "展无涯"
 [y006]: /characters/y006 "李一挝"
+[y007]: /characters/y007 "李元元"
