--- a/_posts/2013-4-11-5-47000.md
+++ b/_posts/2013-4-11-5-47000.md
@@ -24,17 +24,17 @@ tag: [normal]
 
 　　产科的住院部和总医院的住院部是分开的。里面光线充足。高级病房在走廊一端，有独立的楼梯和出入门：专门接待女元老和元老的眷属们。分为单人房和双人间两种，除了办公厅统一派出的服务人员之外，不用家属陪护——就目前受过专业训练的护士紧缺情况来说不可能奢侈到全部使用护士陪护。现在探视时间还没有到，因而里面很安静。只是偶而有婴儿的哇哇哭声。
 
-　　艾贝贝看到走廊里已经来了两个办公厅的办事人员，虽然戴着口罩，她还是认出一个正是办公厅的秘书李元元，她手里拿着一个文件夹子：她们是来做元老子女登记的。
+　　艾贝贝看到走廊里已经来了两个办公厅的办事人员，虽然戴着口罩，她还是认出一个正是办公厅的秘书[李元元][y007]，她手里拿着一个文件夹子：她们是来做元老子女登记的。
 
 　　按照办公厅的规定：每个元老子女出生之后24小时之内就要进行登记注册。艾贝贝知道这种登记十分的精密繁琐。不但有体重身高发色瞳孔色之类，还要拓取掌纹和脚纹存档。不用说昨天出生的几个孩子的小手小脚现在肯定是乌漆吗黑的，办公厅的女服务员多半正给他们擦洗呢。
 
 　　“怎么样？都登记好了吗？”
 
-　　“好了。”李元元笑嘻嘻的说道，“小朋友真可爱！好想一个个都捏捏。”
+　　“好了。”[李元元][y007]笑嘻嘻的说道，“小朋友真可爱！好想一个个都捏捏。”
 
 　　“这么可爱你自己赶快生一个。”艾贝贝笑着说。
 
-　　“我要生啊。你也可以再生几个嘛。”李元元当仁不让，“给朵朵生个弟弟妹妹多好！”
+　　“我要生啊。你也可以再生几个嘛。”[李元元][y007]当仁不让，“给朵朵生个弟弟妹妹多好！”
 
 　　艾贝贝笑了笑。她实在没勇气在这么简陋的医疗条件下再生育几个孩子。作为一个旧时空的医学工作者，她知道即使在元老院的光辉下，他们欠缺的现代医学链条还是太多了。
 
@@ -91,3 +91,4 @@ tag: [normal]
 　　艾贝贝回到手术室，元老医生们轮流当班，调整着病人的体内环境，继续头部冰帽重点降温，维持肛温33-31℃之间，间断使用利尿药，定时血生化检查，维护水电解质量酸碱平衡，并进行各种针对性诊治。经历如此坚持不松懈的抢救，历经十余小时不离开手术台的奋战，抽搐逐步停止，并开始滴第一滴尿，并尿量逐渐增多。
 
 　　大家欣喜若狂。继后，病人意识渐渐恢复，自动睁眼，并达到不能耐受气管插管而示意要求拔管的地步。拔管后，病人已能初步听懂指令，脑复苏取得满意效果，病人生命获救。
+[y007]: /characters/y007 "李元元"
