--- a/_posts/2010-4-12-2-17700.md
+++ b/_posts/2010-4-12-2-17700.md
@@ -28,9 +28,9 @@ tag: [normal]
 
 　　原本[萧子山][y001]考虑到男女大防的问题，想只派男生出来，后来被杜雯一闹，说这是歧视女性，加上于鄂水也说所谓的男女大防在乡间是从来也谈不上的，特别是南方的农村。妇女是农业生产的主力，所以一般的乡间女子从不缠足，抛头露面也很平常。接待员里有女性，代表最多就是以为这些是短毛们收买的丫鬟而已。
 
-　　“请佩戴好你们的代表证，谢谢。”李元元拿着个电喇叭，手里举着一面小三角旗，不断地喊着，犹如导游一般，“大家注意秩序，不要随意插队。随从不能进入会场，把随从留在市场内，我们有专人负责招待。”
+　　“请佩戴好你们的代表证，谢谢。”[李元元][y007]拿着个电喇叭，手里举着一面小三角旗，不断地喊着，犹如导游一般，“大家注意秩序，不要随意插队。随从不能进入会场，把随从留在市场内，我们有专人负责招待。”
 
-　　让李元元充当这个角色，是为了让代表们意识到穿越众当中妇女的地位，对未来的一些提高妇女权益的措施有些心理准备。虽然执委会里除了杜雯之外没有女权主义者，对保护妇女权益也没兴趣，但是在本时空，解放妇女就是解放生产力，这点道理大家还是懂得。
+　　让[李元元][y007]充当这个角色，是为了让代表们意识到穿越众当中妇女的地位，对未来的一些提高妇女权益的措施有些心理准备。虽然执委会里除了杜雯之外没有女权主义者，对保护妇女权益也没兴趣，但是在本时空，解放妇女就是解放生产力，这点道理大家还是懂得。
 
 　　代表们按照各个都、图分别聚合在一起，每个图派几名学生引路，打头的一个学生也举着小旗，上面写着临高X都X图的字样，为了照顾到不识字的代表，小旗上还画上了不同的动植物花纹，用来供他们识别。
 
@@ -80,3 +80,4 @@ tag: [normal]
 
 　　二，只有通过派粮这样的变相税收，才能让自然经济的村落体会到统治者的变更。同时也让他们看到，穿越政权在使用税收方面比传统的官府的优越性。
 [y001]: /characters/y001 "萧子山"
+[y007]: /characters/y007 "李元元"
