--- a/_posts/2010-4-14-2-17900.md
+++ b/_posts/2010-4-14-2-17900.md
@@ -42,7 +42,7 @@ tag: [normal]
 
 　　怀疑归怀疑，但是来开会的代表也没质疑下去——反正现在穿越者是临高的主人，他们怎么做怎么说都可以，大家也就只好姑妄听之。有些人，特别是和穿越集团打过交道的人是相信穿越者会言而有信的，毕竟他们上岸到现在还没有说话不算数的时候。
 
-　　会议这时已经开到了中午，一个上午虽然都是在听讲话，但是因为事关各村的切身利益，每个代表都很认真的听。虽然不时有议论，秩序倒也井然。现在肚子一饿自然就影响注意力了，这时候李元元又上台来了，宣布会议休息，给大家送饭来。
+　　会议这时已经开到了中午，一个上午虽然都是在听讲话，但是因为事关各村的切身利益，每个代表都很认真的听。虽然不时有议论，秩序倒也井然。现在肚子一饿自然就影响注意力了，这时候[李元元][y007]又上台来了，宣布会议休息，给大家送饭来。
 
 　　午饭是用手推车推来的。男女学生们给代表们分发。每人是一个本色磨光的木头盒子，打开之后饭菜比所有人想象中丰富得多——有大米饭和切成片的腊肉、青菜，还有传说中的西红柿炒蛋。非常实在。接着又是一个塞着塞子的竹筒，黄禀坤打开一闻，里面是一种清淡的汤，大约是用某种鱼和海带之类的东西煮的。他喝了一口，味道鲜甜无比——髡贼们吃得还真是不错。
 
@@ -66,7 +66,7 @@ tag: [normal]
 
 　　看起来都是好人家的子弟，不知道吃了什么样的迷幻药，居然认贼作父！黄禀坤暗暗磋叹。
 
-　　吃完午饭，李元元宣布休息半个时辰，大家可以在会场四周散散步，也可以方便一下。但是不得超越会场周边的石灰线。黄禀坤乘机在会场四周查勘起来，沿着石灰线走了一圈，力图想多看些百仞城内的景象。他看到最显著的东西，是城中心的一座高大铁塔。
+　　吃完午饭，[李元元][y007]宣布休息半个时辰，大家可以在会场四周散散步，也可以方便一下。但是不得超越会场周边的石灰线。黄禀坤乘机在会场四周查勘起来，沿着石灰线走了一圈，力图想多看些百仞城内的景象。他看到最显著的东西，是城中心的一座高大铁塔。
 
 　　这座塔的地基部分隐没在几栋与众不同的灰色建筑中间。塔身是用黑色的钢铁搭建起来，有二十个人那么高。它越往上越细，直到变成一个尖尖的头部为止。上面有闪亮的尖端。
 
@@ -75,3 +75,4 @@ tag: [normal]
 　　只是黄禀坤想破了头也想不出这座全部都是铁做得塔到底有什么用，在他看来这完全是浪费——这么多铁不管用来做什么都很可观了。他想凑近些看看，马上就被穿着灰色衣服，腰里束着带子的人挡住了，对方把长长的乌蓝色鸟铳一横，他就只好很明白的退回了线后。
 
 　　这种鸟铳的颜色，倒和当年打死三弟现场捡回来的手铳差不多。可惜父亲打过一次之后就再也打不响了，也不知道子药是怎么装填的。黄禀坤琢磨着，得找个机会好好试试看这种鸟铳——不是要搞保安团么？他打好了主意，到时候亲自率领乡勇来参加，看看“髡贼”打仗到底厉害在哪里，要有机会也搞一支这样的鸟铳。
+[y007]: /characters/y007 "李元元"
