--- a/_posts/2014-8-10-7-00100.md
+++ b/_posts/2014-8-10-7-00100.md
@@ -26,11 +26,11 @@ tag: [normal]
 
 　　真是熟悉的场景啊。[萧子山][y001]默默的想着，忽然有人问：“主任，你喝茶还是格瓦斯吗？”
 
-　　他一惊。抬起头来一看是李元元，正提着个大水壶挨桌子给元老们加水――全体大会属于绝密，归化民一个也不许出席，连带着服务工作也是元老自己干。
+　　他一惊。抬起头来一看是[李元元][y007]，正提着个大水壶挨桌子给元老们加水――全体大会属于绝密，归化民一个也不许出席，连带着服务工作也是元老自己干。
 
 　　“我――还是来茶吧，幸苦你了。”
 
-　　“瞧您说的，为元老院和人民服务嘛！”李元元俏皮的笑了笑，却再也没有当初在总务组忙碌时候的青春活泼的可爱样了――她已经三十了，孩子都生了三个了。
+　　“瞧您说的，为元老院和人民服务嘛！”[李元元][y007]俏皮的笑了笑，却再也没有当初在总务组忙碌时候的青春活泼的可爱样了――她已经三十了，孩子都生了三个了。
 
 　　[萧子山][y001]想到这里摸了摸自己的面孔，当年还算是小伙子。如今是往中年人迈进了。真是年岁不饶人啊。咱们的宏图伟业也的确得赶紧一点了。
 
@@ -42,7 +42,7 @@ tag: [normal]
 
 　　到底还是自家的孩子看着放心呀。[萧子山][y001]想。咱们也不能免俗。
 
-　　这边李元元已经把最新的签到统计数据送了过来。[萧子山][y001]看了看，签到序列号已经到了四百四十八，还有八个人有五个是请了假，另三个还没有联系上。
+　　这边[李元元][y007]已经把最新的签到统计数据送了过来。[萧子山][y001]看了看，签到序列号已经到了四百四十八，还有八个人有五个是请了假，另三个还没有联系上。
 
 　　这个出席比例已经足够高了，本次大会召开前的筹备会议上，就提出要让尽量多的元老出席会议，而不是简单的凑一个三分之二多数。
 
@@ -76,3 +76,4 @@ tag: [normal]
 
 　　“一，此事件强力机构负有责任；二，‘玩忽职守’罪名不成立；三，未发现有人在此事件中有严重过失行为；四，现有强力机构的存在资源配置不足，机构设置不合理的情况，建议进行整改。”
 [y001]: /characters/y001 "萧子山"
+[y007]: /characters/y007 "李元元"
