--- a/_posts/2009-8-30-0-01100.md
+++ b/_posts/2009-8-30-0-01100.md
@@ -845,7 +845,7 @@ IT通信方面
 
 其它方面
 
-1、金克绶（荆柯守），现任不详
+1、[金克绶][y008]（荆柯守），现任不详
 
 2、潘锋（ID不详），现任不详
 
@@ -3447,3 +3447,4 @@ ID不明的穿越者（如有知情者请补充）
 [y005]: /characters/y005 "马千瞩"
 [y006]: /characters/y006 "李一挝"
 [y007]: /characters/y007 "李元元"
+[y008]: /characters/y008 "金克绶"
