--- a/_posts/2009-9-14-1-01400.md
+++ b/_posts/2009-9-14-1-01400.md
@@ -80,7 +80,7 @@ tag: [normal]
 
 　　说着[文德嗣][y002]将到目前为止虫洞的现状、穿越贸易情况、与明朝人的接触、获利作了一个简单的介绍。刚介绍完，就有人要求发言。
 
-　　“我叫金克绶。建议[文总][y002]不要再倒卖瓷器了。文物圈子我多少知道一点：都是相当独立又熟悉的，现在出手几件无所谓，如果持续不断的出手的话，没有几天整个省甚至全国的圈子都知道了。这对我们的保密来说是很不利的。到时候恐怕会惊动文保单位。”
+　　“我叫[金克绶][y008]。建议[文总][y002]不要再倒卖瓷器了。文物圈子我多少知道一点：都是相当独立又熟悉的，现在出手几件无所谓，如果持续不断的出手的话，没有几天整个省甚至全国的圈子都知道了。这对我们的保密来说是很不利的。到时候恐怕会惊动文保单位。”
 
 　　[文德嗣][y002]探出身子，很关注，文物圈的事情的确他不大了解：“那你的建议呢？”
 
@@ -136,3 +136,4 @@ tag: [normal]
 [y005]: /characters/y005 "马千瞩"
 [y006]: /characters/y006 "李一挝"
 [y007]: /characters/y007 "李元元"
+[y008]: /characters/y008 "金克绶"
