y110: '曹顺花', '田顺花', '田大妈', '曹大妈' y156: '李潇侣'

--- a/_posts/2009-10-25-2-00800.md
+++ b/_posts/2009-10-25-2-00800.md
@@ -42,7 +42,7 @@ tag: [normal]
 
 　　[萧子山][y001]脸色变得很难看：厕所门前还有两个拿着SKS的卫兵站岗，刺刀雪亮——这算是哪一出啊。
 
-　　“萧委员，朝这里看！”丁丁举着个DV，正爬在特意调来的一辆挖泥车举起的车斗上，继续着他的连续报道，显然这个剪彩仪式很配他的胃口。丁丁一知道消息就和女友赶来了，在他看来，门口的卫兵，门前代充彩绸的藤条虽然不错，还是太过单调，缺少一些热闹的东西，特别是没有捧彩带的美女。于是十分钟后，测量回来的李潇侣就莫名其妙的被套上一件不合身的旗袍和潘琳——丁丁的外国女朋友的大名——充当起了剪彩礼仪小姐。
+　　“萧委员，朝这里看！”丁丁举着个DV，正爬在特意调来的一辆挖泥车举起的车斗上，继续着他的连续报道，显然这个剪彩仪式很配他的胃口。丁丁一知道消息就和女友赶来了，在他看来，门口的卫兵，门前代充彩绸的藤条虽然不错，还是太过单调，缺少一些热闹的东西，特别是没有捧彩带的美女。于是十分钟后，测量回来的[李潇侣][y156]就莫名其妙的被套上一件不合身的旗袍和潘琳——丁丁的外国女朋友的大名——充当起了剪彩礼仪小姐。
 
 　　前凸后翘的潘琳穿着裹得紧紧的、衩开得高高的旗袍一出马，群众的焦点就变了，想拉屎撒尿的赶紧找个地方去方便，马上又回来占位置。要不是工程组力阻，有人都要爬到厕所的屋顶上去了。
 
@@ -94,3 +94,4 @@ tag: [normal]
 
 　　8、加强营地卫生管理，生活垃圾必须深埋。
 [y001]: /characters/y001 "萧子山"
+[y156]: /characters/y156 "李潇侣"
