--- a/_posts/2009-11-13-2-02700.md
+++ b/_posts/2009-11-13-2-02700.md
@@ -34,7 +34,7 @@ tag: [normal]
 
 　　“规划图出了没有？”
 
-　　“出了。”李潇侣拉开一张1：1000的规划地图。对这个所谓“传承着21世纪的文明火种的基地”该如何规划，从建筑组本身到执委会的各部门都提出了自己的看法和建议，李潇侣归纳下来，决定按照70年代末期的社会主义新农村的规划思路进行设计，当时有一种专门的规划设计图是专门针对“公社驻地”这一级别的村镇的，这种村镇即考虑到了行政、教育、小工业企业，也考虑到了农业生产性建筑，是一种城乡结合，工农副兼顾的新型农村居民模式。
+　　“出了。”[李潇侣][y156]拉开一张1：1000的规划地图。对这个所谓“传承着21世纪的文明火种的基地”该如何规划，从建筑组本身到执委会的各部门都提出了自己的看法和建议，[李潇侣][y156]归纳下来，决定按照70年代末期的社会主义新农村的规划思路进行设计，当时有一种专门的规划设计图是专门针对“公社驻地”这一级别的村镇的，这种村镇即考虑到了行政、教育、小工业企业，也考虑到了农业生产性建筑，是一种城乡结合，工农副兼顾的新型农村居民模式。
 
 　　百仞城的规划是整个城市沿文澜河两岸展开，其中主城区和水电区设置文澜河东岸，重工业区在西岸。
 
@@ -75,3 +75,4 @@ tag: [normal]
 　　目前锅驼机即使在柴油机十分普及的情况下依然有一定的市场。执委会一共采购了6台锅驼机，其中2台是捷克产的单胆火管卧式复胀凝气式锅驼机，飞轮速度达1000转/分，最大功率290马力（213.15KW），用来带动发电机每小时可发电200度以上。这种锅驼机是固定式的，必需在平整的地面上才能工作，另外4台则是100马力的移动式机组，可以用汽车、拖拉机甚至马匹来进行牵引。
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y156]: /characters/y156 "李潇侣"
