--- a/_posts/2009-11-7-2-02100.md
+++ b/_posts/2009-11-7-2-02100.md
@@ -44,7 +44,7 @@ tag: [normal]
 
 　　梅晚点上一支烟，心里有些混乱，按理说他的心思应该都在这条公路上，但是昨天会议上的情景还是不断重现在脑海里。没料到卓天敏这个一贯低调的人居然当场给他来了这一手。这是在博出位啊。梅晚有点苦涩的想到：卓天敏的建筑师、咨询师资格证书恐怕引起执委会很大的兴趣……
 
-　　一时间他觉得危机感四伏，本来他对建筑工程组的这个班子十分满意，冰风这个副组长是结构工程师，专业比较偏；小燕是个杂家，博而不精；李潇侣虽然业务水平很高，但是是女人，又一脸对什么都不感兴趣的模样。
+　　一时间他觉得危机感四伏，本来他对建筑工程组的这个班子十分满意，冰风这个副组长是结构工程师，专业比较偏；小燕是个杂家，博而不精；[李潇侣][y156]虽然业务水平很高，但是是女人，又一脸对什么都不感兴趣的模样。
 
 　　但现在不同了，虽然他自认对土木工程的管理和协调有丰富的经验，但是论及专业水准，他显然不是这个男人的对手。
 
@@ -98,3 +98,4 @@ tag: [normal]
 
 　　见知县满面诧异，黄守统才告诉他：自己的一个儿子昨天袭击海贼的时候阵亡了。
 [y003]: /characters/y003 "王洛宾"
+[y156]: /characters/y156 "李潇侣"
