--- a/_posts/2009-8-30-0-01100.md
+++ b/_posts/2009-8-30-0-01100.md
@@ -313,7 +313,7 @@ tag: [normal]
 
 5、[李元元][y007]（ssfire），现任不详，历任总务组成员（负责文书）
 
-6、田顺花（ID不详），现任不详，历任总务组成员（负责伙食）
+6、[田顺花][y110]（ID不详），现任不详，历任总务组成员（负责伙食）
 
 7、赵晓芹（ID不详），现任不详，历任总务组成员（负责采购）
 
@@ -523,7 +523,7 @@ tag: [normal]
 
 6、田九九（田九九），现任建筑总公司成员，历任建筑组成员（负责给排水设计）
 
-7、李潇侣（ID不详），现任建筑总公司成员，历任建筑组成员
+7、[李潇侣][y156]（ID不详），现任建筑总公司成员，历任建筑组成员
 
 8、燕雀志（heidan7410），现任建筑总公司成员，历任建筑组成员
 
@@ -884,7 +884,7 @@ ID不明的穿越者（如有知情者请补充）
 
 4、 熊卜佑
 
-5、 田顺花
+5、 [田顺花][y110]
 
 6、 赵晓芹
 
@@ -900,7 +900,7 @@ ID不明的穿越者（如有知情者请补充）
 
 12、尤国团
 
-13、李潇侣
+13、[李潇侣][y156]
 
 14、胡候
 
@@ -2942,7 +2942,7 @@ ID不明的穿越者（如有知情者请补充）
 
 9、高晓松（夫）、董薇薇（妻，已怀孕）
 
-10、李潇侣（女）、田顺花（母）
+10、[李潇侣][y156]（女）、[田顺花][y110]（母）
 
 11、游老虎（子）、游老虎的母亲（母）
 
@@ -3019,7 +3019,7 @@ ID不明的穿越者（如有知情者请补充）
 
 2、[马千瞩][y005]、唐糖（崇拜或者暗恋？）
 
-3、李潇侣、执委会某元老（执委会某元老在李潇侣的宿舍留宿过）
+3、[李潇侣][y156]、执委会某元老（执委会某元老在[李潇侣][y156]的宿舍留宿过）
 
 4、万里辉、符喜（有情愫）
 
@@ -3448,3 +3448,5 @@ ID不明的穿越者（如有知情者请补充）
 [y006]: /characters/y006 "李一挝"
 [y007]: /characters/y007 "李元元"
 [y008]: /characters/y008 "金克绶"
+[y110]: /characters/y110 "曹顺花"
+[y156]: /characters/y156 "李潇侣"
