--- a/_posts/2009-9-14-1-01400.md
+++ b/_posts/2009-9-14-1-01400.md
@@ -126,7 +126,7 @@ tag: [normal]
 
 　　分组完毕，会议室内马上响起了一阵乱哄哄的拉凳子换座位的声音，没人提议，各小组就分组就坐了，新任组长顾盼左右，已经颇有领导的感觉了。
 
-　　相形之下，总务组的班底基本上是娘子军，第一批来的都是技术类骨干，所以归在总务组旗帜下的都是这些骨干们带来的女朋友和老婆——还有一位大妈，是某女性技术员的妈——真是可怜天下父母心……
+　　相形之下，总务组的班底基本上是娘子军，第一批来的都是技术类骨干，所以归在总务组旗帜下的都是这些骨干们带来的女朋友和老婆——还有一位[大妈][y110]，是[某女性技术员][y156]的妈——真是可怜天下父母心……
 
 　　[萧子山][y001]开始头痛以后怎么和娘子军们相处了。更要命的是，这些还都是“别人的女人”。他暗暗提醒自己要小心避嫌。
 [y001]: /characters/y001 "萧子山"
@@ -137,3 +137,5 @@ tag: [normal]
 [y006]: /characters/y006 "李一挝"
 [y007]: /characters/y007 "李元元"
 [y008]: /characters/y008 "金克绶"
+[y110]: /characters/y110 "曹顺花"
+[y156]: /characters/y156 "李潇侣"
