--- a/_posts/2009-9-17-1-01700.md
+++ b/_posts/2009-9-17-1-01700.md
@@ -28,9 +28,9 @@ tag: [normal]
 
 　　“我倒不在乎做饭，只要你们敢吃！哈哈哈。”这位摆出一幅你们不怕死就叫姑奶奶做饭好了的架势来。
 
-　　“我倒是可以给大伙做饭，米饭、烙饼、擀条子都行。不过这么多人得准备大锅子。我也没做过食堂，不知道能不能行啊。”曹大妈扎撒着两只手，有点犹豫。
+　　“我倒是可以给大伙做饭，米饭、烙饼、擀条子都行。不过这么多人得准备大锅子。我也没做过食堂，不知道能不能行啊。”[曹大妈][y110]扎撒着两只手，有点犹豫。
 
-　　[萧子山][y001]知道曹大妈的大名叫曹顺花，初中毕业就下乡，很晚才回城。除了曾经在一家街道大集体企业做过几年的临时工之外，基本上就是当了一辈子家庭妇女。丈夫很早就去世，女儿是搞建筑的，离婚不久。生活经历坎坷，为人朴实坚韧，套用老话说就是一位“具有中国劳动妇女传统美德”的女性。
+　　[萧子山][y001]知道[曹大妈][y110]的大名叫[曹顺花][y110]，初中毕业就下乡，很晚才回城。除了曾经在一家街道大集体企业做过几年的临时工之外，基本上就是当了一辈子家庭妇女。丈夫很早就去世，女儿是搞建筑的，离婚不久。生活经历坎坷，为人朴实坚韧，套用老话说就是一位“具有中国劳动妇女传统美德”的女性。
 
 　　“我们订盒饭解决吧。”一位年龄较长的女性建议着，“这么多人呢，而且以后还会更多，我们都去做饭也不够。”
 
@@ -136,6 +136,7 @@ tag: [normal]
 
 　　“没关系的，呵呵，有女人在，他们会比较注意自己的形象，不会搞得太邋遢。”
 
-　　短暂的半小时休息时间，[萧子山][y001]大体把总务组的各个环节都建立起来。采购：赵晓芹；食堂：田顺花；宿舍：方忆静；文秘：[李元元][y007]。每个人配一名助手。[萧子山][y001]想，这样穿越之后，如何组织后勤也就有章可循了。
+　　短暂的半小时休息时间，[萧子山][y001]大体把总务组的各个环节都建立起来。采购：赵晓芹；食堂：[田顺花][y110]；宿舍：方忆静；文秘：[李元元][y007]。每个人配一名助手。[萧子山][y001]想，这样穿越之后，如何组织后勤也就有章可循了。
 [y001]: /characters/y001 "萧子山"
 [y007]: /characters/y007 "李元元"
+[y110]: /characters/y110 "曹顺花"
