--- a/_posts/2009-9-18-1-01800.md
+++ b/_posts/2009-9-18-1-01800.md
@@ -56,7 +56,7 @@ tag: [normal]
 
 　　住房问题是另外一个大家比较关心的问题。内务组原计划采购大批的帐篷，建立一个帐篷营地作为正式建造房屋前的过渡。不过建筑组的提议是采购简易房进行直接组装，这样的简易房屋在工地很常见——作为宿舍和办公用房。板材质地多种多样，可以根据需求选购。重量小，搭建容易，有一定的保温性，较帐篷要舒适的多。耐用性也好：如果维护得当，使用七到八年不成问题。
 
-　　“我们公司一个部门，用最简单的彩钢活动房做仓库和办公用房已经快十年了，现在使用状态依然很好。”做介绍的正是田大妈的女儿李潇侣，是个瘦小的北方女性，差不多三十岁，皮肤白皙，戴着一副细边眼镜，“也可以做成楼房，不过要加轻钢结构。”
+　　“我们公司一个部门，用最简单的彩钢活动房做仓库和办公用房已经快十年了，现在使用状态依然很好。”做介绍的正是[田大妈][y110]的女儿[李潇侣][y156]，是个瘦小的北方女性，差不多三十岁，皮肤白皙，戴着一副细边眼镜，“也可以做成楼房，不过要加轻钢结构。”
 
 　　“因为我们要面对的环境比较恶劣，”她的声音又轻又细，“可以采用高档一些的材料，比如磷镁活动房。
 
@@ -70,7 +70,7 @@ tag: [normal]
 
 　　“做厂房呢？”工业组对这个问题比较在意。
 
-　　“如果是大跨度的厂房库房是不行的，不过可以用水涮石的简易房。”李潇侣继续她的介绍，“实际就是角钢结构的水泥板简易房。它比一般简易房要重得多。好处是寿命可达二十年以上。能组装大跨度的房屋，也可以用来建造2－3层的楼房。”
+　　“如果是大跨度的厂房库房是不行的，不过可以用水涮石的简易房。”[李潇侣][y156]继续她的介绍，“实际就是角钢结构的水泥板简易房。它比一般简易房要重得多。好处是寿命可达二十年以上。能组装大跨度的房屋，也可以用来建造2－3层的楼房。”
 
 　　“水泥板啊……”有人在迟疑中。
 
@@ -88,7 +88,7 @@ tag: [normal]
 
 　　此人的发言虽然招来了一片白眼。但是许多人的内心其实还是挺巴望有空调的：自己用惯了空调，到了明朝的海南可是连电扇都没有啊。
 
-　　“传统的空调肯定不可能了。”李潇侣看了一眼[萧子山][y001]，见这位会议主持人没有反对，就谈了下去，“传统空调要大量的电力，还要化学的冷媒。对我们来说是奢侈了一点。要是执委会最终决定要使用空调的话，我们有二个方案可用。”她似乎有点眩晕，又打了一个恶心，扶着桌站了一会，才继续下去：
+　　“传统的空调肯定不可能了。”[李潇侣][y156]看了一眼[萧子山][y001]，见这位会议主持人没有反对，就谈了下去，“传统空调要大量的电力，还要化学的冷媒。对我们来说是奢侈了一点。要是执委会最终决定要使用空调的话，我们有二个方案可用。”她似乎有点眩晕，又打了一个恶心，扶着桌站了一会，才继续下去：
 
 　　“一种是湿帘式冷却空调，实际上就是使用蒸发式换气扇，省掉了内机风扇和压缩机，冷媒是水。用电很节约，缺点是湿度大，而且这个换气扇的制造也有相当的难度。”
 
@@ -115,3 +115,5 @@ tag: [normal]
 　　“这个问题我们再研究研究吧。”
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
+[y110]: /characters/y110 "曹顺花"
+[y156]: /characters/y156 "李潇侣"
