--- a/_posts/2009-9-19-1-01900.md
+++ b/_posts/2009-9-19-1-01900.md
@@ -46,7 +46,7 @@ tag: [normal]
 
 　　“连女人？”
 
-　　“对，连女人，不过那位田大妈就不用了。男人不分年龄，女人四十以下的。”
+　　“对，连女人，不过那位[田大妈][y110]就不用了。男人不分年龄，女人四十以下的。”
 
 　　“训练什么呢？”[萧子山][y001]想不会是大学军训的那些内容吧。
 
@@ -128,3 +128,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y110]: /characters/y110 "曹顺花"
