--- a/_posts/2010-1-2-2-07700.md
+++ b/_posts/2010-1-2-2-07700.md
@@ -18,7 +18,7 @@ tag: [normal]
 
 　　受到盐店成功的鼓舞，穿越者的第二家商店也开张了。这家店有些特别，之所以说它特别，是因为它不是“国有商店”，也就是说，所有权并非全体穿越者，而是股份制企业。
 
-　　这个股份制企业是明家四口里的李梅给鼓捣出来的。搬到百仞城安定下来不久，习惯于商场搏击的李老太太开始坐不住了。眼下儿媳妇又当了公安，老伴每天穿上他那套没领章帽徽的87式海军服，去军事组当什么海军顾问，儿子虽然窝窝囊囊的一时间没混上公职，好歹也天天在外面干活，她倒成天跟着一家庭妇女曹顺花在食堂帮忙，这怎么行？！她到底是商界里久经风浪的，一直盘算着要搞个公司什么的，起码也得开家店。
+　　这个股份制企业是明家四口里的李梅给鼓捣出来的。搬到百仞城安定下来不久，习惯于商场搏击的李老太太开始坐不住了。眼下儿媳妇又当了公安，老伴每天穿上他那套没领章帽徽的87式海军服，去军事组当什么海军顾问，儿子虽然窝窝囊囊的一时间没混上公职，好歹也天天在外面干活，她倒成天跟着一家庭妇女[曹顺花][y110]在食堂帮忙，这怎么行？！她到底是商界里久经风浪的，一直盘算着要搞个公司什么的，起码也得开家店。
 
 　　开店，对原来时空中的李梅来说是手到擒来的小事，她要本钱有本钱，要渠道有渠道，但是在这里，全家除了一堆行李之外就再没有什么东西了。穿越者本身也没什么可以卖的商品，巧媳妇难做无米之炊，所以她只好等待机会。李老太太坚信一点：发财的机会在任何时空都是有的，只要看你能不能把握。
 
@@ -40,7 +40,7 @@ tag: [normal]
 
 　　“公司在这，”李梅拿出一张纸来，上面密密麻麻的写满了字，“这是公司成立的协议书，按理说得先工商注册，不过东门吹雨说他不知道有没有权力管这个，我就拿给你看了。”
 
-　　[文德嗣][y002]拿来一看，上面大致是写了这些人自愿投资成立一家“海南妇女合作社股份有限公司”，经营范围有：日用品百货、餐饮、五金等等东西，下面是股份分配比例和十几个女人的签名——粗粗一看，差不多是全体穿越者女性，连一贯以朴实著称的曹大妈也有股份。
+　　[文德嗣][y002]拿来一看，上面大致是写了这些人自愿投资成立一家“海南妇女合作社股份有限公司”，经营范围有：日用品百货、餐饮、五金等等东西，下面是股份分配比例和十几个女人的签名——粗粗一看，差不多是全体穿越者女性，连一贯以朴实著称的[曹大妈][y110]也有股份。
 
 　　“可是你们的注资是什么呢？大家现在哪里有钱？都是供给制么。”
 
@@ -76,3 +76,4 @@ tag: [normal]
 
 　　杜雯在会议上支持尤为积极——原来这家公私合营股份公司除了穿越者全体拥有20％的股份之外，杜雯一直鼓吹要成立的“妇联”，还没成立就占有了5％的股份。最大的受益人当然是李梅本人，她虽然一元钱点券也没有，还是以经理人的身份得到了12％的股份——这是全体股东大会上投票决定的。
 [y002]: /characters/y002 "文德嗣"
+[y110]: /characters/y110 "曹顺花"
