--- a/_posts/2010-10-23-3-18800.md
+++ b/_posts/2010-10-23-3-18800.md
@@ -62,7 +62,7 @@ tag: [normal]
 
 　　此时乌云花和一个小商贩说，“这五百斤打个堆，一总给个价吧。”
 
-　　这个小贩带的货物是各色干果，其中的红枣质量尤其好，皮薄肉厚，颜色红艳。是真正的陕西灵宝的红枣。负责食堂的曹顺花一眼就相中了，列入了需求名单。
+　　这个小贩带的货物是各色干果，其中的红枣质量尤其好，皮薄肉厚，颜色红艳。是真正的陕西灵宝的红枣。负责食堂的[曹顺花][y110]一眼就相中了，列入了需求名单。
 
 　　“首长们既要，只管拿去，不敢计较价钱。若是体恤小的们，就赏给小的三十两做盘缠好了。”这商贩很是会说话，说起话来很是动听。
 
@@ -144,3 +144,4 @@ tag: [normal]
 
 　　接着，商人们又问了许多事情，熊卜佑一一做了回答。他的诚恳态度打动了大家，终于有人点头道：“既然这样，我下个月就运一批桐油过来。”
 [y005]: /characters/y005 "马千瞩"
+[y110]: /characters/y110 "曹顺花"
