--- a/_posts/2010-4-7-2-17200.md
+++ b/_posts/2010-4-7-2-17200.md
@@ -10,7 +10,7 @@ tag: [normal]
 
 　　“说到底，这是个大会场，不是啥体育场。”梅晚看着堆在自己面前的图纸，这些都是手下们画了几个晚上出的图纸，本时空可没有大型宽幅打印机，出图那是硬碰硬的在绘图板上一笔一笔的画出来的。
 
-　　“跑道要不要造？”负责规划设计的李潇侣问。
+　　“跑道要不要造？”负责规划设计的[李潇侣][y156]问。
 
 　　“跑道还是要造的，阅兵和群众游行要用。材料就用煤渣。”梅晚托着下巴考虑了一下，“场地用砂石拌石灰铺上碾压一下，下雨不积水就可以了。其他设施一概不要。”
 
@@ -98,9 +98,9 @@ tag: [normal]
 
 　　“什么？！安全标准还有现代过去之分？”冰风火冒三丈。
 
-　　梅晚劝阻道：“不要发火嘛，这是技术问题，大家商量着办就是了。”他转头问在一边画总体结构图的李潇侣。
+　　梅晚劝阻道：“不要发火嘛，这是技术问题，大家商量着办就是了。”他转头问在一边画总体结构图的[李潇侣][y156]。
 
-　　“这个呀，你们看好了。”李潇侣仔细的勾勒着图纸，“我是学规划和环境的，不懂建筑结构。”
+　　“这个呀，你们看好了。”[李潇侣][y156]仔细的勾勒着图纸，“我是学规划和环境的，不懂建筑结构。”
 
 　　燕雀志在旁道：“老大，你要慎重啊，建筑这事情乃是百年大计，一旦出了事情要遗臭万年的。”
 
@@ -139,3 +139,4 @@ tag: [normal]
 　　除了脱水的问题，竹筋还面临着碱腐蚀。日本人在二战前的试验表明：未经过处理的竹筋在砼中6个月之后，收到碱分的侵蚀，完全失去了强度。
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y156]: /characters/y156 "李潇侣"
