--- a/_posts/2010-4-8-2-17300.md
+++ b/_posts/2010-4-8-2-17300.md
@@ -84,7 +84,7 @@ tag: [normal]
 
 　　“陆军是穷光蛋，海军才厉害，”冰风有些羡慕地吐出一口烟气，又咳嗽了两声，“要不是我晕船，我也投海军去了。那小日子过得——”
 
-　　“我们这搞工程的苦啊，”燕雀志看着工地上满头大汗在指挥工人砌石块的梅林，拿着水平仪测水平的李潇侣等一干人，“连女人都在工地上干活。”
+　　“我们这搞工程的苦啊，”燕雀志看着工地上满头大汗在指挥工人砌石块的梅林，拿着水平仪测水平的[李潇侣][y156]等一干人，“连女人都在工地上干活。”
 
 　　“你蛮会怜香惜玉的嘛，怎么，有意思？”
 
@@ -101,3 +101,4 @@ tag: [normal]
 　　“是啊，梅总说不定能轮到一个。”
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y156]: /characters/y156 "李潇侣"
