--- a/_posts/2010-7-21-3-09400.md
+++ b/_posts/2010-7-21-3-09400.md
@@ -70,7 +70,7 @@ tag: [normal]
 
 　　“要我说最好能装个冷库。”时袅仁点上一支新的香烟，“反正现在的温度实在不行，等夏天更要命了。屋子里肯定热得象蒸笼，药都保存不了。”
 
-　　“李潇侣不是搞过一地冷空调的图纸吗？我看我们可以申请一次。反正夏天就要到了。”河马说着话，女孩子们从门里走了出来，郭芙走了过来。
+　　“[李潇侣][y156]不是搞过一地冷空调的图纸吗？我看我们可以申请一次。反正夏天就要到了。”河马说着话，女孩子们从门里走了出来，郭芙走了过来。
 
 　　河马对这个年轻女孩子靠近身边，心里有一种说不出的暧昧的滋味。那浆洗得笔挺的蓝色衣服勾勒出的身段，蓝色帽子下边略有点蓬松的鬓发，要是用手一摸会是很柔软的。他定了定神，说：
 
@@ -129,3 +129,4 @@ tag: [normal]
 　　“其实只能算是护工。她们实习机会太少了，各种耗材和药品也不够用。”张子怡说，“没有标本、没有器材、除了酒精和脱脂棉，护士们能用到的东西几乎是零。连红药水都没有。”
 
 　　大概为了增强效果，张子怡扳着指头说：“到现在为止，护士们能敞开使用的只有：医用酒精、洗涤用的盐水。连注射用生理盐水都没法配制。”
+[y156]: /characters/y156 "李潇侣"
