--- a/_posts/2010-7-22-3-09500.md
+++ b/_posts/2010-7-22-3-09500.md
@@ -84,7 +84,7 @@ tag: [normal]
 
 　　整个制药厂被视作穿越集团的要害部门，在基建方面享有最高的优先权。为了保证厂区某些生产试验室的恒温，百仞城的第一套空调系统就安装在制药厂。
 
-　　这便是当初李潇侣提出过的地能空调，先通过钻孔达到地下十几米的深处，利用地下的恒温特性，将水作为热交换媒介在地下和建筑中循环就可以做到冬暖夏凉。冬天从地取热，夏天向地放热。
+　　这便是当初[李潇侣][y156]提出过的地能空调，先通过钻孔达到地下十几米的深处，利用地下的恒温特性，将水作为热交换媒介在地下和建筑中循环就可以做到冬暖夏凉。冬天从地取热，夏天向地放热。
 
 　　原理很简单，但是整个系统却是非常地奢侈。不仅是要挖十几米的深井，还要制造高效率的热交换器——是用黄铜做的。光这些铜就让计委心疼了好半天。
 
@@ -92,3 +92,4 @@ tag: [normal]
 
 　　这个工程就在紧锣密鼓中上马了，机械厂开始按照图纸制造相关的管路和设备。
 [y005]: /characters/y005 "马千瞩"
+[y156]: /characters/y156 "李潇侣"
