--- a/_posts/2010-7-24-3-09700.md
+++ b/_posts/2010-7-24-3-09700.md
@@ -14,11 +14,11 @@ tag: [normal]
 
 　　“我还想喂猪呢。”吴南海觉得可惜。
 
-　　“喂马喂猪都浪费。现在能做得菜少，我给大家做炒豆渣吃吧，也算一道菜肴。”主持食堂工作的田大妈说。
+　　“喂马喂猪都浪费。现在能做得菜少，我给大家做炒豆渣吃吧，也算一道菜肴。”主持食堂工作的[田大妈][y110]说。
 
 　　“这就算了吧。”吴南海说，“不给大家骂死才怪。”
 
-　　“不难吃，用羊油、大油一炒，再放些青蒜，喷香……”田大妈比划着，“雪花菜！”
+　　“不难吃，用羊油、大油一炒，再放些青蒜，喷香……”[田大妈][y110]比划着，“雪花菜！”
 
 　　“缺荤油，那玩意就靠油来提味。不然干豆渣谁吃啊。”
 
@@ -142,3 +142,4 @@ tag: [normal]
 
 　　“一百两？”
 [y005]: /characters/y005 "马千瞩"
+[y110]: /characters/y110 "曹顺花"
