--- a/_posts/2011-11-25-4-20400.md
+++ b/_posts/2011-11-25-4-20400.md
@@ -24,7 +24,7 @@ tag: [normal]
 
 　　郑尚洁先骑车回到了临高角上的飞云号停泊的码头，这一带作为未来的元老海滨休闲区已经用铁丝网和壕沟圈占出了一大片的土地和沙滩。设立了警戒区代号为“63号地区”——对外称呼“临高角公园”。由新近扩编成的临高警备营第2连负责周边警备——夏季觉醒战役开始之后陆军不敷使用，临高守备部队有点空虚。经过执委会和元老院的批准，原来连部设在东门市的警备连升格为临高警备营，李亚阳升任营长。警备营设置三个连。第2连即负责警备临高角、博铺港等地区。
 
-　　这会，临高角公园的外围警戒塔楼和壕沟还在施工当中，63号地区内的景观建筑，道路和绿化也在李潇侣的指挥下紧张地进行着——按照要求，63号地区的所有工程必须在1630年的12月20日之前完工。
+　　这会，临高角公园的外围警戒塔楼和壕沟还在施工当中，63号地区内的景观建筑，道路和绿化也在[李潇侣][y156]的指挥下紧张地进行着——按照要求，63号地区的所有工程必须在1630年的12月20日之前完工。
 
 　　郑尚洁向看守进入绿区的警备连士兵出示了通行证，沿着新修的煤渣路一路飞驰向码头。这里已经修筑了专门的游艇码头，飞云号正系泊在上面。
 
@@ -85,3 +85,4 @@ tag: [normal]
 　　叮嘱再三之后，郑尚洁带着钱玄黄到了吴南海的农庄——她在这里预订了鸡蛋和牛奶。自从规模养殖开始之后，每个元老现在每天都能得到鸡蛋的配给，农庄里也开始饲养了十来头奶牛——牛奶目前还不能普遍供应，只供应给14周岁以下儿童，另外元老也可以用自己的鸡蛋份额来换取牛奶。
 
 　　郑尚洁和钱水延两口子长期不在临高，两口子的鸡蛋份额都积攒了下来，她今天一次性领取其中的一大部分用来明天聚会用得菜肴。
+[y156]: /characters/y156 "李潇侣"
