--- a/_posts/2011-8-27-4-11400.md
+++ b/_posts/2011-8-27-4-11400.md
@@ -6,7 +6,7 @@ path: 2011-8-27-4-11400.md
 tag: [normal]
 ---
 
-　　“李潇侣，景观和环境设计就归你了，多花钱没关系，要大气要舒服。”梅晚随后分派了任务。
+　　“[李潇侣][y156]，景观和环境设计就归你了，多花钱没关系，要大气要舒服。”梅晚随后分派了任务。
 
 　　“好的。”她点了点头，“住公寓的人最需要休憩空间了。工程预算有保障的话我有个现成的方案。”
 
@@ -110,3 +110,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y156]: /characters/y156 "李潇侣"
