--- a/_posts/2012-3-11-5-07400.md
+++ b/_posts/2012-3-11-5-07400.md
@@ -32,19 +32,19 @@ tag: [normal]
 
 　　广州大世界的项目得到通过，让张易坤立刻就抖了起来——作为项目发起人、策划人，外加又专业对口，所以在组织处举行的广州大世界经营负责人的公开招聘中他很容易就得到了任命。
 
-　　此刻他正在惠福街的一座院子里看着未来的大世界草图——这是几天前李潇侣刚刚手工绘制出来的。为了确保工期，梅晚专门指示梅林和李潇侣留在广州，以便为大世界项目服务。为了便于工作，给李潇侣配了一套专业绘图工具，甚至还配了专门的照明灯——电源是用广州站配备的人力发电机。
+　　此刻他正在惠福街的一座院子里看着未来的大世界草图——这是几天前[李潇侣][y156]刚刚手工绘制出来的。为了确保工期，梅晚专门指示梅林和[李潇侣][y156]留在广州，以便为大世界项目服务。为了便于工作，给[李潇侣][y156]配了一套专业绘图工具，甚至还配了专门的照明灯——电源是用广州站配备的人力发电机。
 
-　　“大世界”的设计指导思想在本质上是一个武装商站兼shopingmall。这个奇特的混合体到底应该是什么模样李潇侣毫无概念，虽然在旧时空她一天到晚干的就是绘图工作，但是从来就没有绘制过棱堡的结构图，更不用说还得带商业功能。洪水尹等人连说带画，好不容易才她明白了这些人的设想。
+　　“大世界”的设计指导思想在本质上是一个武装商站兼shopingmall。这个奇特的混合体到底应该是什么模样[李潇侣][y156]毫无概念，虽然在旧时空她一天到晚干的就是绘图工作，但是从来就没有绘制过棱堡的结构图，更不用说还得带商业功能。洪水尹等人连说带画，好不容易才她明白了这些人的设想。
 
 　　不过这次一次绘制出来的草图是离他们的想法还是很远。不过起码的外形总是有了。图纸上是一个“五棱形建筑群”，形象的说，类似“五角大楼”。
 
 　　“有点意思了！”张易坤连连点头，“不过内部结构……”
 
-　　“慢慢改吧。最好你们能出个明确的功能性结构草图给我。这样我才能具体设计。”李潇侣伸了个懒腰，“有些设想是没法设计的，和建筑功能和结构有冲突。”
+　　“慢慢改吧。最好你们能出个明确的功能性结构草图给我。这样我才能具体设计。”[李潇侣][y156]伸了个懒腰，“有些设想是没法设计的，和建筑功能和结构有冲突。”
 
 　　“当然，当然，主要还是根据你的专业意见。”张易坤连连点头。他对女设计师很客气，不仅因为她专业相当不错，而且江湖传说她和执委会中的某人关系暧昧。有人目睹某人出入过她的公寓过夜。
 
-　　“还有就是地质资料。”李潇侣说，“下来我要设计建筑结构，你们得赶快把基建地址上的地质资料给我。”
+　　“还有就是地质资料。”[李潇侣][y156]说，“下来我要设计建筑结构，你们得赶快把基建地址上的地质资料给我。”
 
 　　“我们一确定地址就马上派人去勘探。”张易坤看了看这个一直有点懒懒的女人，觉得她虽然白白净净，模样很斯文，一副女知识分子的模样，身材相貌也没有多少傲人的本钱，人又不活跃，一天到晚一副慵懒的模样。怎么有执委会看上她？
 
@@ -85,3 +85,4 @@ tag: [normal]
 　　水泥需要的原材料尽管广州本地出产有限，但是产区距离都不算远，又有珠江、东江、西江等水路沟通，运输便捷。
 
 　　“还有木材加工厂和木器厂。”洪水尹说，“现在就近加工木材生产木器给大世界项目配套，以后还可以给香港的造船厂配套。未来还可以为新广州项目配套。”
+[y156]: /characters/y156 "李潇侣"
