--- a/_posts/2012-3-9-5-07200.md
+++ b/_posts/2012-3-9-5-07200.md
@@ -20,9 +20,9 @@ tag: [normal]
 
 　　除了这三个人之外，其他帖子都不要紧。至于一干围着裴莉秀转悠的少爷公子，等紫明楼稍稍恢复整齐，由她出面招待就是。
 
-　　临高建筑公司随队来的建筑师梅林和李潇侣走了进来，他们刚刚具体勘察了整个惠福街建筑群的破坏情况，以便制定修复和改建计划。
+　　临高建筑公司随队来的建筑师梅林和[李潇侣][y156]走了进来，他们刚刚具体勘察了整个惠福街建筑群的破坏情况，以便制定修复和改建计划。
 
-　　这两个人都穿着不伦不类的明人装束，梅林戴着六合一统帽，李潇侣戴了个歪掉的假发髻。看上去很不适应。
+　　这两个人都穿着不伦不类的明人装束，梅林戴着六合一统帽，[李潇侣][y156]戴了个歪掉的假发髻。看上去很不适应。
 
 　　这里是宅邸的核心部分，院子门口就有政保人员进行关防。除了元老和元老的秘书、机要员之外无论是归化民还是本地的伙计非传唤不得入内，是可以比较随意地谈话的地方。
 
@@ -34,7 +34,7 @@ tag: [normal]
 
 　　“是的。”郭逸点头，“多招募些本地木匠让他们加紧做就是了。至于木材，到高举的货栈里看看。他那里有多年存放的上好木材，马上就能拿来用。”
 
-　　“看这个模样，内装的配件我们带得不够，恐怕还得向临高追加订货。”李潇侣看了看本子，“紫明楼的状况还不知道怎么样……”
+　　“看这个模样，内装的配件我们带得不够，恐怕还得向临高追加订货。”[李潇侣][y156]看了看本子，“紫明楼的状况还不知道怎么样……”
 
 　　“不会好到哪里去。”郑尚洁插话道，她叹了口气。
 
@@ -44,9 +44,9 @@ tag: [normal]
 
 　　“好。”梅林在本子上记下了他的要求，“内宅部分我也会安排人先修理一下，起码先把上下水和卫浴设备恢复起来让你们能用。”
 
-　　“明天我想去看看紫明楼的情况。”李潇侣说，“好估算下工期和材料。”
+　　“明天我想去看看紫明楼的情况。”[李潇侣][y156]说，“好估算下工期和材料。”
 
-　　第二天郑尚洁和裴莉秀陪着李潇侣等人去了一次紫明楼，实地查看情况，打开紧锁大门，里面虽然已经打扫过一遍，依旧是一片狼藉。
+　　第二天郑尚洁和裴莉秀陪着[李潇侣][y156]等人去了一次紫明楼，实地查看情况，打开紧锁大门，里面虽然已经打扫过一遍，依旧是一片狼藉。
 
 　　和郭逸估计的一样，紫明楼的破坏状况不逊色。地毯被割掉了一半，窗户上的玻璃全部被打碎，窗扇和雕花罩被拆走。玻璃吊灯荡然无存。大浴池虽然经过了打扫，但是上面的雕像、水暖五金件和瓷砖都大量丢失。显然还有人试图拆卸包房里的水暖设备和洁具，结果造成了很大的破坏，抽水马桶、浴缸和各种管道几乎全部破坏，丢失严重，因为管道损毁，水箱里的水泄露出来，弄得到处都是水侵蚀过得痕迹。楼内的家具陈设等等物件几乎全部丢失，连用来给水塔上水用的畜力机也被拆毁了。
 
@@ -58,7 +58,7 @@ tag: [normal]
 
 　　裴莉秀气的说不出话来，看到自己曾经精心布置的闺房和沙龙被糟蹋的不成样子，她简直要哭了出来。郑尚洁也觉得很气愤。这简直就是糟践东西么！
 
-　　梅林和李潇侣看了之后也搞了个修复方案。这里的修复不算紧急事务。而且需要从临高订货的建材比惠福街那里要多得多。只好将工期排在后面了。裴莉秀虽然不满意，也只好认了。
+　　梅林和[李潇侣][y156]看了之后也搞了个修复方案。这里的修复不算紧急事务。而且需要从临高订货的建材比惠福街那里要多得多。只好将工期排在后面了。裴莉秀虽然不满意，也只好认了。
 
 　　“我看你也不必急一时。”郑尚洁和她坐同一顶轿子，开导她说，“惠福街那边修好了，你就先住惠福街。这边，先把过去的熟客们请一遍。再去拜访一圈。房子没修好不要紧。把人情关系收拾起来。”
 
@@ -91,3 +91,4 @@ tag: [normal]
 　　郭逸道：“我们远涉海波，到达大明，为的就是做买卖赚钱。到了京师，当然是还是为了赚钱。少不得也要看看朝廷的面色，探探风向，再请大哥介绍几个‘朋友’，免得哪一天朝廷动了雷霆之怒……”
 
 　　“呵呵。”高举笑着连连点头，“文掌柜果然不凡。”
+[y156]: /characters/y156 "李潇侣"
