--- a/_posts/2013-12-21-6-25200.md
+++ b/_posts/2013-12-21-6-25200.md
@@ -102,7 +102,7 @@ tag: [normal]
 
 　　没错，按照《共同纲领》的规定，杨欣武的确可以利用这个漏洞来保护的女仆。但是这等于是彻底否决了警察总部到现在为止的所有侦察结果，也瞬间把行成的证据链清零。[萧子山][y001]十分清楚这事情的后果：警察总部和仲裁庭都会有强烈的反弹，而且杨欣武的顶罪和元老院的特赦不是一码事，警察总部得另外凭空编造一套证据来怎么的确是杨元老干的。
 
-　　“这个你先坐吧。”[萧子山][y001]知道自己到李潇侣宿舍里吃顿好的，再滚床单的美好期望正在不断推迟中。搞不好要持久战。“这样，似乎不大好吧？”
+　　“这个你先坐吧。”[萧子山][y001]知道自己到[李潇侣][y156]宿舍里吃顿好的，再滚床单的美好期望正在不断推迟中。搞不好要持久战。“这样，似乎不大好吧？”
 
 　　“我也知道不大好，但是我想不出更好的办法了。”杨欣武一屁股坐在藤沙发上，双手插进乱蓬蓬的头发里，“就算你上次说过为我争取缓刑或者监视居住，一个有着杀人犯头衔的母亲，大概也没法在人群中抬头了……我不想这样。”
 
@@ -120,3 +120,4 @@ tag: [normal]
 
 　　“不用了，我能自己回去”
 [y001]: /characters/y001 "萧子山"
+[y156]: /characters/y156 "李潇侣"
