--- a/_posts/2014-1-1-6-26300.md
+++ b/_posts/2014-1-1-6-26300.md
@@ -76,7 +76,7 @@ tag: [normal]
 
 　　“不过我打听到了。”孙尚香沉住气说，她说了三个女仆的主人的名字。
 
-　　“有一个是李潇侣家的？！”程咏昕听到里面有“李潇侣”三个字，顿时来了精神。
+　　“有一个是[李潇侣][y156]家的？！”程咏昕听到里面有“[李潇侣][y156]”三个字，顿时来了精神。
 
 　　“是的，叫李柒柒。”
 
@@ -88,7 +88,7 @@ tag: [normal]
 
 　　没想到今天孙尚香就给她带来了一个相当有价值的消息！
 
-　　女仆学校废校这件事在元老的圈子里一点风声都没有，但是李柒柒却已经知道了很显然这事情已经在办公厅进行了讨论，说不定执委会的大佬也知晓此事。程咏昕觉得，这么大一件事，不大可能已经定局，更大的可能性是执委会的高层正在磋商中。[萧子山][y001]在去李潇侣家过夜的时候不经意说出来了，被女仆偶然的听到，就成了“即将废校”。
+　　女仆学校废校这件事在元老的圈子里一点风声都没有，但是李柒柒却已经知道了很显然这事情已经在办公厅进行了讨论，说不定执委会的大佬也知晓此事。程咏昕觉得，这么大一件事，不大可能已经定局，更大的可能性是执委会的高层正在磋商中。[萧子山][y001]在去[李潇侣][y156]家过夜的时候不经意说出来了，被女仆偶然的听到，就成了“即将废校”。
 
 　　就透出消息的渠道来说，这个消息的真实性在九成以上。
 
@@ -111,3 +111,4 @@ tag: [normal]
 　　等到孙尚香离开，程咏昕打开保险柜，从里面取出笔记本，一本一本的翻了起来。
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
+[y156]: /characters/y156 "李潇侣"
