--- a/_posts/2014-1-12-6-27400.md
+++ b/_posts/2014-1-12-6-27400.md
@@ -6,7 +6,7 @@ path: 2014-1-12-6-27400.md
 tag: [normal]
 ---
 
-　　李潇侣见他面色凝重，小声问：“事情很严重？”
+　　[李潇侣][y156]见他面色凝重，小声问：“事情很严重？”
 
 　　“还不知道。”[萧子山][y001]仰头靠在沙发上，“不过有人是项庄舞剑啊。”
 
@@ -14,33 +14,33 @@ tag: [normal]
 
 　　“还不知道，不过这个孙尚香显然是受人指使在拉拢柒柒。她的主人到底有什么目的还弄不清楚。”
 
-　　“那我就叫柒柒继续和她周旋，套套她的话。”李潇侣小声说。
+　　“那我就叫柒柒继续和她周旋，套套她的话。”[李潇侣][y156]小声说。
 
 　　“我比较担心她泄露出去的废校的议案。”[萧子山][y001]有些担忧，“这事目前是内部讨论的阶段，知道的元老很少，如果被她泄露出去，很难说有没有人会借机生事。”
 
-　　“的确，不管怎么样，透出这事来，起码你一个泄密的问题就跑不过。”李潇侣说，“我显然不是你应该透露议案的元老。”
+　　“的确，不管怎么样，透出这事来，起码你一个泄密的问题就跑不过。”[李潇侣][y156]说，“我显然不是你应该透露议案的元老。”
 
 　　“是啊。”[萧子山][y001]的脸上露出一丝忧色，“大不了死不承认就是了。”
 
-　　李潇侣用手指在他大腿上画着圈，沉吟道：“我倒是有个主意。”
+　　[李潇侣][y156]用手指在他大腿上画着圈，沉吟道：“我倒是有个主意。”
 
 　　“什么？”[萧子山][y001]随口问道。
 
 　　“孙尚香从柒柒口里得到了废校的消息，我们就通过柒柒在茶室向女仆们再透出点类似的料去，把水搅混。”
 
-　　[萧子山][y001]看了一眼李潇侣：“你还真有想法。”
+　　[萧子山][y001]看了一眼[李潇侣][y156]：“你还真有想法。”
 
 　　“那是。本宫最爱看宫斗小说，这点套路还能不明白？”
 
 　　“嗯。”[萧子山][y001]没有说话，他沉默了一会。说：“要不我们过几天就向办公厅申请结婚吧。”
 
-　　李潇侣扑哧笑了：“屁，你自己就是办公厅主任，自己报告自己批啊！”
+　　[李潇侣][y156]扑哧笑了：“屁，你自己就是办公厅主任，自己报告自己批啊！”
 
-　　[萧子山][y001]佯装正色到：“这叫程序合法——非常重要。‘[萧子山][y001]同志。本人[萧子山][y001]，特申请和李潇侣同志结成革命夫妻。我俩符合执委对结婚申请的要求，愿意在婚后继续为建设伟大的祖国而奋斗，希望批准！’”
+　　[萧子山][y001]佯装正色到：“这叫程序合法——非常重要。‘[萧子山][y001]同志。本人[萧子山][y001]，特申请和[李潇侣][y156]同志结成革命夫妻。我俩符合执委对结婚申请的要求，愿意在婚后继续为建设伟大的祖国而奋斗，希望批准！’”
 
-　　李潇侣接口说道：“组织决定不予批准。办公厅主任[萧子山][y001]。”
+　　[李潇侣][y156]接口说道：“组织决定不予批准。办公厅主任[萧子山][y001]。”
 
-　　[萧子山][y001]苦笑起来，李潇侣乐了：“我就喜欢和你这样不明不白的乱搞男女关系……”
+　　[萧子山][y001]苦笑起来，[李潇侣][y156]乐了：“我就喜欢和你这样不明不白的乱搞男女关系……”
 
 　　单良虽然一心要借着女仆学校废校这个传闻的东风来场“占百运动”，“酱油革命”但是他和成默等人的积极活动并没有收到什么效果：临高本质上已经没什么真正的“酱油”元老了。可以说是人人有职务，个个有下属。哪怕是最苦逼的农技员或者机械厂的元老技师。都指挥着一大群归化民职员、工人。走到哪里都是威风八面，前呼后拥。一句顶一万句固然达不到，顶个十句百句还是不成问题的。外面是下属、徒弟众星捧月，回家是女仆悉心侍奉，原本的被压迫感、被剥夺感、被忽视感大幅度减轻了。
 
@@ -82,3 +82,4 @@ tag: [normal]
 
 　　为了这偷盗电信设备的问题，绍宗没少操心，跑临高找警察，找陆军，在工地上自己操着棒子率领工人到沿路各村去“清缴”。总算琼海治安战过去不久，元老院的积威之下，还没人敢公然反抗的。
 [y001]: /characters/y001 "萧子山"
+[y156]: /characters/y156 "李潇侣"
