--- a/_posts/2014-1-17-6-27900.md
+++ b/_posts/2014-1-17-6-27900.md
@@ -44,13 +44,13 @@ tag: [normal]
 
 　　[萧子山][y001]微笑着点点头，仿佛根本没听到他说的话，自说自话：“这么说你过得还不错。”
 
-　　“李潇侣最近换香水了吗？”
+　　“[李潇侣][y156]最近换香水了吗？”
 
-　　“大概是吧。”[萧子山][y001]竭力掩饰自己的惊诧，他和李潇侣之间的关系虽然不见得密不透风，但是知道的人并不多，而且这些知道的人大多奉信“沉默是金”，绝不会随意外传。最关键的是辛无最平日里能够接触到的元老极少，知道这件事情的可能性为零，他忍不住问道，“你怎么知道？”
+　　“大概是吧。”[萧子山][y001]竭力掩饰自己的惊诧，他和[李潇侣][y156]之间的关系虽然不见得密不透风，但是知道的人并不多，而且这些知道的人大多奉信“沉默是金”，绝不会随意外传。最关键的是辛无最平日里能够接触到的元老极少，知道这件事情的可能性为零，他忍不住问道，“你怎么知道？”
 
 　　“你的衣服上沾染了气味，”辛无最抽动了下鼻子，深深的吸了一口气，“这是一种本地产的香水，不过分出了头香次香和尾香，比你过去身上的香水味要深邃复杂。那位调制香水的小姐手艺见长。”
 
-　　“我是说，你怎么知道李潇侣的？”
+　　“我是说，你怎么知道[李潇侣][y156]的？”
 
 　　辛无最凝视了他片刻，忽然笑了起来：“你很爱她吧。”
 
@@ -150,3 +150,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y156]: /characters/y156 "李潇侣"
