--- a/_posts/2014-1-18-6-28000.md
+++ b/_posts/2014-1-18-6-28000.md
@@ -124,7 +124,7 @@ tag: [normal]
 
 　　“您的疑心病很重——这很好。社会经验告诉我们：凡事都要经得起利益的推敲。我选择你们的原因很简单：因为你们——”辛无最轻轻一弹雪茄，让长长的烟灰断在一个青花瓷笔洗里“掌握着权力。不要碰权势者的女人——这是我个人的一点经验教训。”辛无最带着一种玩世不恭的笑容，“如果还有第二个虫洞的话，我或许会考虑一试。”
 
-　　[萧子山][y001]知道双方的底牌都已经摊开了。从某种意义上说，辛无最这个大绅士赢了。他成功的利用了自己对李潇侣的感情，激怒了自己，迫使自己改变了决定。
+　　[萧子山][y001]知道双方的底牌都已经摊开了。从某种意义上说，辛无最这个大绅士赢了。他成功的利用了自己对[李潇侣][y156]的感情，激怒了自己，迫使自己改变了决定。
 
 　　“你到这个时空是为了什么？”辛无最悠悠的说道，“还要继续你过去那种委曲求全，忍气吞声的生活吗？”
 
@@ -136,3 +136,4 @@ tag: [normal]
 
 　　“没问题。”辛无最举起了双手，露出了纯真的笑容，“你会满意的。”
 [y001]: /characters/y001 "萧子山"
+[y156]: /characters/y156 "李潇侣"
