--- a/_posts/2014-11-2-7-08500.md
+++ b/_posts/2014-11-2-7-08500.md
@@ -78,16 +78,17 @@ tag: [normal]
 
 　　林佰光可没心思关心市民们怎么想，棚屋一拆除，他立刻组织队伍对承宣大街的路面进行临时性修补。
 
-　　眼下大修是不可能的，这条路不但长，而且多年未修，路面路基损坏都很严重。要大修就得将覆盖的砂岩石板和青砖全部揭去，没几个月功夫根本完不成，何况铺路的建材在哪里还不知道。所以来负责主持广州市政工程的李潇侣的意见是用拆棚屋得到的砖瓦石块先作暂时性修补。将路面上的坑洞缝隙填平，大致保持路面平坦就行了。
+　　眼下大修是不可能的，这条路不但长，而且多年未修，路面路基损坏都很严重。要大修就得将覆盖的砂岩石板和青砖全部揭去，没几个月功夫根本完不成，何况铺路的建材在哪里还不知道。所以来负责主持广州市政工程的[李潇侣][y156]的意见是用拆棚屋得到的砖瓦石块先作暂时性修补。将路面上的坑洞缝隙填平，大致保持路面平坦就行了。
 
-　　这样的临时性修补不需要太多技术工人，用时也很短。林佰光同意了这个方案。他对李潇侣说：
+　　这样的临时性修补不需要太多技术工人，用时也很短。林佰光同意了这个方案。他对[李潇侣][y156]说：
 
 　　“在36小时内完成修补工作。”他下了死命令，“3月5日早晨7点前必需全线贯通！”说着他对工房书办贾觉说，“从今天起，你听这位李首长的命令行事！”
 
 　　贾觉看到首长居然是个女的，不由得吃了一惊。一个妇人也懂修路？
 
-　　李潇侣带着自己的班子搬进了双门楼，亲自指挥路面修补工程。施工队是贾觉召集起来县里的工役——他们也算是胥吏的一种。为了弥补人手不足的问题，又调动了部分国民军。
+　　[李潇侣][y156]带着自己的班子搬进了双门楼，亲自指挥路面修补工程。施工队是贾觉召集起来县里的工役——他们也算是胥吏的一种。为了弥补人手不足的问题，又调动了部分国民军。
 
-　　街道一清理干净，街道两侧就挂起了许多灯笼，连夜开始修补道路。李潇侣亲自上工地指挥。
+　　街道一清理干净，街道两侧就挂起了许多灯笼，连夜开始修补道路。[李潇侣][y156]亲自上工地指挥。
 
 　　广州市民们看到一个“女髡”在街上指手画脚，指挥着几百人干活，都大吃一惊——但是更让他们震惊的是这“女髡”居然只穿了裤子就上街了，连裙子都没穿。“髡贼伤风败俗至此！”有书生在当晚自己的笔记上写下这句话，接下来他又写道，“女髡体态婀娜，自有一番风流模样”。
+[y156]: /characters/y156 "李潇侣"
