--- a/_posts/2014-6-14-6-42700.md
+++ b/_posts/2014-6-14-6-42700.md
@@ -6,7 +6,7 @@ path: 2014-6-14-6-42700.md
 tag: [normal]
 ---
 
-　　卢炫的书房在第二进院的跨院，小小的院落自成一个小天地，不管是建造还是庭院景观设计都是整间住宅的精华。小院是专门请临高建筑里唯一专业的景观设计师李潇侣设计的，闹得总设计师梅晚很是吃了一番醋。
+　　卢炫的书房在第二进院的跨院，小小的院落自成一个小天地，不管是建造还是庭院景观设计都是整间住宅的精华。小院是专门请临高建筑里唯一专业的景观设计师[李潇侣][y156]设计的，闹得总设计师梅晚很是吃了一番醋。
 
 　　既然精心打造，自然是不惜工本，花去的成本大约是整间住宅的三分之一。不过卢炫认为这个钱花得值，比起正房来，这里才是他的司令部。实际上，他平日里除了晚上睡觉之外很少去正院，大多数时候都在书房里度过。
 
@@ -95,3 +95,4 @@ tag: [normal]
 　　“小日子倒还行，可是你知道，我还有个生活秘书――”
 
 　　“啊。对，对，齐人之福嘛，有什么不好的？元老院里有这个福分的人可不多啊。”
+[y156]: /characters/y156 "李潇侣"
