--- a/_posts/2009-10-18-2-00100.md
+++ b/_posts/2009-10-18-2-00100.md
@@ -16,7 +16,7 @@ tag: [normal]
 
 　　“你不管，一会要出了事故就不好办了！鲨鱼不说了，都爬在那晃晃悠悠的小艇甲板上，摔下去一个连捞都不用捞。”
 
-　　正说着，管理食堂的田大妈一脸无奈地走了进来：
+　　正说着，管理食堂的[田大妈][y110]一脸无奈地走了进来：
 
 　　“马委员，您说这咋办呢？大伙说要喝点稀饭，我看船上那伙房，做不了四百个人的稀饭，来不及啊……”
 
@@ -24,11 +24,11 @@ tag: [normal]
 
 　　“可是您不是登陆总指挥吗？这船上的事情都归您管啊。”
 
-　　还不都是你自己搞出来的事情！现在问我怎么办？[马千瞩][y005]心里暗暗骂了起来，但是又不便发作——人田大妈五十多的人了，跟着穿越众舍生忘死的来开辟新世界——只好先敷衍一下，把皮球踢回去：“有多少先熬多少，一批批的发吧，有总比没有好……你再找[子山][y001]商量一下。”
+　　还不都是你自己搞出来的事情！现在问我怎么办？[马千瞩][y005]心里暗暗骂了起来，但是又不便发作——人[田大妈][y110]五十多的人了，跟着穿越众舍生忘死的来开辟新世界——只好先敷衍一下，把皮球踢回去：“有多少先熬多少，一批批的发吧，有总比没有好……你再找[子山][y001]商量一下。”
 
 　　不给大家熬稀饭本来也没什么：每个人都准备有二天分的干粮，只要保持淡水供应，啃啃那能量棒也能对付过去。
 
-　　问题是这田大妈一看到船上有厨房，居然不管三七二十一的就按老习惯做上早饭了，天还没亮，总务组的[李元元][y007]带着几个女孩子给船楼里的执委会委员们端来了刚出锅的稀饭和蒸好的馒头，每人还有一小碟袋装咸菜和几颗油炸花生米。
+　　问题是这[田大妈][y110]一看到船上有厨房，居然不管三七二十一的就按老习惯做上早饭了，天还没亮，总务组的[李元元][y007]带着几个女孩子给船楼里的执委会委员们端来了刚出锅的稀饭和蒸好的馒头，每人还有一小碟袋装咸菜和几颗油炸花生米。
 
 　　这下[马千瞩][y005]就知道麻烦了，群众就是不患寡而患不均的，凭什么你们领导都在吃热腾腾稀饭馒头，俺们群众要就着凉水啃那过期月饼馅一般味道的能量棒？这事业的一开头，就搞出差别待遇来，人心一散，队伍就不好带了。所以这会执委会喝粥都偷偷摸摸的，没人靠近舷窗。他摸起电话：“轮机舱吗？把制淡设备开到最大，要充分保证淡水供应！”
 
@@ -76,3 +76,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y005]: /characters/y005 "马千瞩"
 [y007]: /characters/y007 "李元元"
+[y110]: /characters/y110 "曹顺花"
