--- a/_posts/2010-11-20-3-21600.md
+++ b/_posts/2010-11-20-3-21600.md
@@ -6,7 +6,7 @@ path: 2010-11-20-3-21600.md
 tag: [normal]
 ---
 
-　　茉莉轩的院子里原有许多茉莉，但是历年来已经枯死了不少。这次修复又重新进行补栽。李潇侣还做了园林景观的设计，造了苏式园林一般的围墙和漏窗，修了假山水池。最后这新修复的茉莉轩就变得和原来时空里的很多假古建一个风格。
+　　茉莉轩的院子里原有许多茉莉，但是历年来已经枯死了不少。这次修复又重新进行补栽。[李潇侣][y156]还做了园林景观的设计，造了苏式园林一般的围墙和漏窗，修了假山水池。最后这新修复的茉莉轩就变得和原来时空里的很多假古建一个风格。
 
 　　王赐看了却是目瞪口呆，临高这地方从来就没有私家园林的概念，除了县衙后院稍有休憩的水石点缀之外，茉莉轩就算是本县最好的人工景观了，常常作为本地官吏文人雅集宴饮的地方。
 
@@ -69,3 +69,4 @@ tag: [normal]
 　　翻看着这些字迹笔画清晰无比，纸张雪白，装订考究的图书，众人不由得啧啧称奇，期间还爆发了一场句读派和不句读派之间的争议：前者认为书籍有句读是好事，后者则认为这样会损害对原作的理解。
 
 　　但是不管有没有句读，临高在历史上还没有这样齐全的藏书楼，不论公私。这给士子们带来的震撼是巨大的。澳洲人不是来自“蛮夷之邦”么？为什么他们的书籍却能印刷的如此的精良。而且每一本书籍的点校一看就是下了极大的功夫的，这绝不是蛮夷之邦能够做到的。难不成他们真是宋人的后裔，华夏正统。许多士子心中的夷夏之分有些动摇起来了。
+[y156]: /characters/y156 "李潇侣"
