--- a/_posts/2011-12-17-4-22600.md
+++ b/_posts/2011-12-17-4-22600.md
@@ -28,7 +28,7 @@ tag: [normal]
 
 　　地方虽然偏僻一些，门脸也不大，但是整个琼海号的房屋修缮十分考究。即按照传统古代《营造法式》修筑，又引入了许多澳洲式的享用设施，诸如玻璃窗、配有冷热水的浴室、抽水马桶之类。李洛由对澳洲人的卫浴设备特别欣赏。在传统的住宅里，再怎么考究奢侈的房屋，厕所都是令人难以踏足的所在，不管你熏多少名贵的香料，那股恶臭始终是挥之不去的。
 
-　　琼海号里修筑了一个小小的花园——这个花园是由李潇侣设计的“现代式”的古典园林。不过很对李洛由的胃口。两人换过衣服，就在这个花园的水榭里谈话。
+　　琼海号里修筑了一个小小的花园——这个花园是由[李潇侣][y156]设计的“现代式”的古典园林。不过很对李洛由的胃口。两人换过衣服，就在这个花园的水榭里谈话。
 
 　　顾葆成交给他的账本，他已经大致看过一遍。账面上流通券有大笔的节余，现在都存在德隆的银行户头上，顾葆成的意思是最近可以减少向临高的出口，加大从临高的进口，以便尽快将银行的存款消化掉。
 
@@ -93,3 +93,4 @@ tag: [normal]
 　　被围困在琼山县的全部文武将佐和官兵自双方签订条约之日起，由澳宋海军负责分批全部遣返大陆。遣返地点由广东方面指定。白沙水寨、海口及其他琼州本地卫所的官兵，各自回建，伏波军概不阻挡。
 
 　　遣返的人员可携带武器、辎重、旗帜和10天的口粮。不得携带火药、大炮、牲畜和粮草。游击以上军官可带回本人马匹。无论官兵均可以带回自己的私人财物——限重十公斤。官军所遗船只，凡属白沙水寨的，归还白沙水寨，其他船只全部予以没收。
+[y156]: /characters/y156 "李潇侣"
