--- a/_posts/2011-4-30-3-37700.md
+++ b/_posts/2011-4-30-3-37700.md
@@ -60,7 +60,7 @@ tag: [normal]
 
 　　除了这批女人之外，女仆学校还需要一个校长来负责全部事务。在BBS上热切表达愿意为大家教育女仆的宅男们显然是靠不住的，闹不好会监守自盗，最好还是找个女人来负责来得可靠稳妥。
 
-　　穿越众当中的成年女性人数也有近二十个，问题是除了李潇侣和杜雯是单身之外，全是穿越众的老婆或者女友——显然她们对培养自己未来的竞争对手是不感兴趣的。而李杜二人，一个是逍遥分子，除了工作之外不说一句话，一个是绝对的女权派，对此更加深恶痛绝了。
+　　穿越众当中的成年女性人数也有近二十个，问题是除了[李潇侣][y156]和杜雯是单身之外，全是穿越众的老婆或者女友——显然她们对培养自己未来的竞争对手是不感兴趣的。而李杜二人，一个是逍遥分子，除了工作之外不说一句话，一个是绝对的女权派，对此更加深恶痛绝了。
 
 　　想来想去，想到了董薇薇，倒不是她表现出什么“豁达”的精神来，而是董薇薇是女仆们的健身教练。
 
@@ -103,3 +103,4 @@ tag: [normal]
 　　“撒谎。”董薇薇把手臂围在丈夫的脖子上，嫣然一笑，“不过我考虑考虑。”
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y156]: /characters/y156 "李潇侣"
