--- a/_posts/2011-6-15-4-04100.md
+++ b/_posts/2011-6-15-4-04100.md
@@ -22,7 +22,7 @@ tag: [normal]
 
 　　[马千瞩][y005]看了下院子里的青砖小楼。[萧子山][y001]的办公室就在二楼的顶端。他要是从窗户里看下来就能看到自己——照他的一贯做法，肯定要和自己来应酬应酬。想到这里，他紧走几步赶紧脱离这个视线区。
 
-　　办公厅休息室就在办公厅的后院。[萧子山][y001]让李潇侣搞了个景观设计，造了一座敞轩式的假古建，四面移栽了好些花木——眼下茉莉开得正盛，雪白的小花满枝，芳香袭人。
+　　办公厅休息室就在办公厅的后院。[萧子山][y001]让[李潇侣][y156]搞了个景观设计，造了一座敞轩式的假古建，四面移栽了好些花木——眼下茉莉开得正盛，雪白的小花满枝，芳香袭人。
 
 　　这是个类似茶馆的地方，屋子里很敞亮，里面有藤制的座椅，很象[马千瞩][y005]去过的苏州杭州的茶馆。清风习习，是个休息谈话的好地方。不过这里没有服务员，茶叶、开水和饮料全是现成的，整齐的包装好了放在矮柜上。自带杯子也可以，用这里的杯子也行，沿墙有水槽，还备用刷子和小包的漂白粉。墙壁上贴着一张纸：“使用茶具之后请自行清洗！”
 
@@ -183,3 +183,4 @@ tag: [normal]
 　　“这里的同志们都是准备接受派遣到大陆上从事情报和贸易活动的，有些同志会留在总局工作，不过难免也要出差。”
 [y001]: /characters/y001 "萧子山"
 [y005]: /characters/y005 "马千瞩"
+[y156]: /characters/y156 "李潇侣"
