--- a/_posts/2011-8-30-4-11700.md
+++ b/_posts/2011-8-30-4-11700.md
@@ -96,9 +96,10 @@ tag: [normal]
 
 　　贷款谈成之后，农庄咖啡馆扩建工程就正式开始了。
 
-　　咖啡馆扩建由张兴培负责结构，李潇侣负责周边景观设计。这也是临高建筑总公司继为教会服务之后在临高的第二次商业性建筑活动。从设计到建造全部是收费的。
+　　咖啡馆扩建由张兴培负责结构，[李潇侣][y156]负责周边景观设计。这也是临高建筑总公司继为教会服务之后在临高的第二次商业性建筑活动。从设计到建造全部是收费的。
 
 　　新农庄咖啡馆采用简单易造的木结构房屋。除了扩大室内的营业面积之外，还增加了木结构露天阳台的室外空间。可以让元老们在风和日丽的日子享受露天的微风和阳光。
 
 　　按照计划：增建室内营业面积上，将全部使用私密性更好的高背火车座式座位。照明也不使用大型煤气灯了，而是改为每桌一个玻璃蜡烛台，有客人的时候点上彩色小蜡烛。桌子配上了美丽的小花瓶，每天更新从农庄花园里采摘来的鲜花。墙上挂起了风景画的画片。如果再加上未来要播放的缓慢的靡靡之音，就非常的伪小资了。
 [y001]: /characters/y001 "萧子山"
+[y156]: /characters/y156 "李潇侣"
