--- a/_posts/2012-6-15-5-17000.md
+++ b/_posts/2012-6-15-5-17000.md
@@ -14,7 +14,7 @@ tag: [normal]
 
 　　“嘿嘿，你也去买个吧，不上床，做做饭也是好的。”海林劝道
 
-　　“嗯，明天去女仆学校看看，选个做饭好的。食堂的饭自从不是曹大妈掌勺之后现在越来越难吃了，也就执委会这帮牲口还能对付。”吴旷明一边说一边拍了拍饭桌，吃惊道：“我擦，你小子连饭桌都是黄花梨的？”
+　　“嗯，明天去女仆学校看看，选个做饭好的。食堂的饭自从不是[曹大妈][y110]掌勺之后现在越来越难吃了，也就执委会这帮牲口还能对付。”吴旷明一边说一边拍了拍饭桌，吃惊道：“我擦，你小子连饭桌都是黄花梨的？”
 
 　　海林点点头，不在意地说：“我屋里就这桌子是黄花梨的，其他的都不是，很多元老都认识这种木材，用来做家具太扎眼了，其他的家具都用‘坡垒’做的。”
 
@@ -69,3 +69,4 @@ tag: [normal]
 　　丰城轮上的气象雷达可以对登陆区域是琼北的台风做出相当准确预报，但是要做中国沿海的台风预报，就得在台风的策源地和主要路径上设置观测站。到关岛去设置一个观察站现在对他们来说未免力有未逮。科技部准备在东沙、西沙和南沙群岛等地设置观察站，同时，在巴达维亚的领事馆也要做天气资料搜集的工作，尽量做到能够对影响中国沿海的台风做出预报。
 
 　　至于后者，预报寒潮要在大陆上寒潮的必经之路上设置观察站。科技部准备在已经有外派人员的北京、杭州和广东等地设置若干观测站，还准备在发动机行动结束之后在济州岛和东北设置观察站。对寒潮的袭来做一些预警工作。
+[y110]: /characters/y110 "曹顺花"
