--- a/_posts/2013-11-28-6-22900.md
+++ b/_posts/2013-11-28-6-22900.md
@@ -44,7 +44,7 @@ tag: [normal]
 
 　　“不是欠缺，是非常欠缺。”
 
-　　“那为什么单身又饥渴的男元老们都看不上女元老？那些单身的女元老，除了勘探部的那个女孩子之外，好像都没有男朋友。就算毫无约束力的情人关系也很少。”她忽然又插了一句：“你知道[萧子山][y001]经常到李潇侣宿舍里过夜嘛？”
+　　“那为什么单身又饥渴的男元老们都看不上女元老？那些单身的女元老，除了勘探部的那个女孩子之外，好像都没有男朋友。就算毫无约束力的情人关系也很少。”她忽然又插了一句：“你知道[萧子山][y001]经常到[李潇侣][y156]宿舍里过夜嘛？”
 
 　　“这是个人的私事。至于其他人或许缘分不到。”
 
@@ -148,3 +148,4 @@ tag: [normal]
 
 　　“好吧，咱们有备无患，看看你到底打算卖什么药。”江山默念着喝下了口中的咖啡。
 [y001]: /characters/y001 "萧子山"
+[y156]: /characters/y156 "李潇侣"
