--- a/_posts/2014-1-11-6-27300.md
+++ b/_posts/2014-1-11-6-27300.md
@@ -8,7 +8,7 @@ tag: [normal]
 
 　　[萧子山][y001]摸了摸下巴，觉得自己和法学会的人想得都太“现代”了。
 
-　　李潇侣继续说，“女仆们都是旧社会过来的苦人儿，到元老身边当小老婆、通房丫鬟，对她们来说就是‘终身有靠’。说真得除了元老，这个世界哪找对她们这么好的男人去？有几个嫌日子过得太好了要离开元老换个男人呢？再说所谓奴役的‘绝契’，换个角度等于是‘终身雇佣’。现在这一改，女仆们从‘国企职工’变成了‘合同工’，你说她们会怎么想？我爸妈从前可都是国企的，东北国企从九十年代搞全员劳动合同制到后来的下岗都挨着过，这里面的甜酸苦辣全尝过。对于已经习惯了稳定的人来说，那可真是晴天霹雳，人心惶惶。到时候谁还能安心工作？女人图得就是有个可以死心塌地跟着的男人，21世纪的女人也不能免俗，何况17世纪的呢？”
+　　[李潇侣][y156]继续说，“女仆们都是旧社会过来的苦人儿，到元老身边当小老婆、通房丫鬟，对她们来说就是‘终身有靠’。说真得除了元老，这个世界哪找对她们这么好的男人去？有几个嫌日子过得太好了要离开元老换个男人呢？再说所谓奴役的‘绝契’，换个角度等于是‘终身雇佣’。现在这一改，女仆们从‘国企职工’变成了‘合同工’，你说她们会怎么想？我爸妈从前可都是国企的，东北国企从九十年代搞全员劳动合同制到后来的下岗都挨着过，这里面的甜酸苦辣全尝过。对于已经习惯了稳定的人来说，那可真是晴天霹雳，人心惶惶。到时候谁还能安心工作？女人图得就是有个可以死心塌地跟着的男人，21世纪的女人也不能免俗，何况17世纪的呢？”
 
 　　“你真是我的贤内助呀。”[萧子山][y001]笑着说，“魔爪”揉搓的力度又加大了几分，“分析的到位！”
 
@@ -26,17 +26,17 @@ tag: [normal]
 
 　　李柒柒进到卧室里，看到自家主人和[萧主任][y001]正坐在沙发上等着自己，一脸严肃，简直是土地公公和土地奶奶似的 。赶紧上前，躬着身子，毕恭毕敬的回答到：“两位首长有什么吩咐。”
 
-　　李潇侣说：“你把昨天和我说得话再说一遍给[萧主任][y001]听。”
+　　[李潇侣][y156]说：“你把昨天和我说得话再说一遍给[萧主任][y001]听。”
 
 　　李柒柒把腰弓到更低：“是。”
 
 　　她当即把前几天去43号买东西的时候发生的一件奇怪的事情说了出来。
 
-　　几天前李柒柒去43号买些料子，曹大妈带了一台老式缝纫机，她自己又会裁又会缝，还兼任被服厂的顾问。闲下来就是裁剪缝的，因而李潇侣的四季衣服是最体面的：其他女元老若不是靠自家带来的库存，就只能仰仗本地裁缝的不靠谱的裁剪手艺。平时曹大妈也给元老的孩子们做些小衣服、小被子之类。[萧子山][y001]自从溜上了李潇侣的床，连带着衣服也光鲜起来。
+　　几天前李柒柒去43号买些料子，[曹大妈][y110]带了一台老式缝纫机，她自己又会裁又会缝，还兼任被服厂的顾问。闲下来就是裁剪缝的，因而[李潇侣][y156]的四季衣服是最体面的：其他女元老若不是靠自家带来的库存，就只能仰仗本地裁缝的不靠谱的裁剪手艺。平时[曹大妈][y110]也给元老的孩子们做些小衣服、小被子之类。[萧子山][y001]自从溜上了[李潇侣][y156]的床，连带着衣服也光鲜起来。
 
-　　买完料子，她照例在43号的茶室里喝杯茶，吃快点心。曹大妈虽然做饭手艺一流，奈何点心方面是煎饼馍馍窝头拉条子当道，李柒柒原本是南方大户人家的丫头，所谓“吃不惯这些个面条子”。茶社有米粉糕点，也有烘培出来的饼干酥饼。她就隔三差五来解解馋。最喜欢吃得是里面的一种扬州风味的蛋黄千层糕。不过，李潇侣在财务上对她管束很严，每月按数给她零用钱，不许她象大多数男元老的生活秘书一样可以随意消费记账。因而她的私人消费也是浅尝辄止，如果要买件价值较高的商品，就得和小孩子一样节约开销，存下钱来才行。自然平日里和其他女仆交往的时候，也少不了要抱怨抱怨。
+　　买完料子，她照例在43号的茶室里喝杯茶，吃快点心。[曹大妈][y110]虽然做饭手艺一流，奈何点心方面是煎饼馍馍窝头拉条子当道，李柒柒原本是南方大户人家的丫头，所谓“吃不惯这些个面条子”。茶社有米粉糕点，也有烘培出来的饼干酥饼。她就隔三差五来解解馋。最喜欢吃得是里面的一种扬州风味的蛋黄千层糕。不过，[李潇侣][y156]在财务上对她管束很严，每月按数给她零用钱，不许她象大多数男元老的生活秘书一样可以随意消费记账。因而她的私人消费也是浅尝辄止，如果要买件价值较高的商品，就得和小孩子一样节约开销，存下钱来才行。自然平日里和其他女仆交往的时候，也少不了要抱怨抱怨。
 
-　　李柒柒最近一直想买条格子花样的打褶裙子，刚刚面向生活秘书们销售，就已经在这个群体中流行开来了。李柒柒看大伙穿着都好看，也想买一条，奈何李潇侣在给她买衣服上是有严格的年度预算的，每半年买一次内衣和袜子裙子、外套、衬衣都是一年买一次。
+　　李柒柒最近一直想买条格子花样的打褶裙子，刚刚面向生活秘书们销售，就已经在这个群体中流行开来了。李柒柒看大伙穿着都好看，也想买一条，奈何[李潇侣][y156]在给她买衣服上是有严格的年度预算的，每半年买一次内衣和袜子裙子、外套、衬衣都是一年买一次。
 
 　　她每次去43号，都在服装柜这件衣服钱逡巡好久，忍不住摸了又摸，看了又看。自然始终也没买。
 
@@ -50,17 +50,17 @@ tag: [normal]
 
 　　“这么有钱，何许人也？”[萧子山][y001]说。
 
-　　李潇侣说：“我这几天发觉柒柒的消费不正常，和她平日里的消费习惯不一样我就问了她。”怎么，你拷问柒柒了？”[萧子山][y001]开玩笑的说道。
+　　[李潇侣][y156]说：“我这几天发觉柒柒的消费不正常，和她平日里的消费习惯不一样我就问了她。”怎么，你拷问柒柒了？”[萧子山][y001]开玩笑的说道。
 
-　　“我哪有这么凶狠。就是问了她几句话。她和我一五一十说了。我当时就觉得不对。”李潇侣说“这有点刻意结交的意思。我说你不是一直想买那裙子吗？你放出话去，说昨天是你生日。”
+　　“我哪有这么凶狠。就是问了她几句话。她和我一五一十说了。我当时就觉得不对。”[李潇侣][y156]说“这有点刻意结交的意思。我说你不是一直想买那裙子吗？你放出话去，说昨天是你生日。”
 
 　　“结果呢？”
 
-　　“结果昨天这位生活秘书就送了打褶裙子给柒柒了，说是生日礼物。”李潇侣得意的说，“果然是个有心人。”
+　　“结果昨天这位生活秘书就送了打褶裙子给柒柒了，说是生日礼物。”[李潇侣][y156]得意的说，“果然是个有心人。”
 
-　　[萧子山][y001]点点头，心里有些惊讶。他知道李潇侣看似沉默寡言，一副对什么都毫无兴趣的模样，其实是个很聪明的人，没想到她的机心并不逊于其他人，而且时时刻刻都注意着周边。只不过“不争不言”而已。
+　　[萧子山][y001]点点头，心里有些惊讶。他知道[李潇侣][y156]看似沉默寡言，一副对什么都毫无兴趣的模样，其实是个很聪明的人，没想到她的机心并不逊于其他人，而且时时刻刻都注意着周边。只不过“不争不言”而已。
 
-　　不过，李潇侣虽然挂着一堆建筑规划方面的头衔，实际并无实权，是典型的技术干部。有人刻意拉拢她的生活秘书，显然是曲线救国，图谋的是自己这个办公厅主任。
+　　不过，[李潇侣][y156]虽然挂着一堆建筑规划方面的头衔，实际并无实权，是典型的技术干部。有人刻意拉拢她的生活秘书，显然是曲线救国，图谋的是自己这个办公厅主任。
 
 　　他的面色凝重，问道：“这个生活秘书叫什么名字？”
 
@@ -68,7 +68,7 @@ tag: [normal]
 
 　　“孙尚香？”[萧子山][y001]记得许多元老的生活秘书的名字，唯独对这个名字没什么印象。不过他知道这一定是某位酱油元老的生活秘书。
 
-　　看他不再开口，李潇侣挥挥手，对李柒柒说到：“没你什么事了你下去把。”
+　　看他不再开口，[李潇侣][y156]挥挥手，对李柒柒说到：“没你什么事了你下去把。”
 
 　　李柒柒紧张的一直弯着腰回话，听到这句话如蒙大赦，刚要后退着转身离开屋子，[萧子山][y001]突然开口了：“等一下。”
 
@@ -82,7 +82,7 @@ tag: [normal]
 
 　　“这个首长关照过，萧首长来的事情，打死都不能向外人说。”李柒柒的声音都颤抖起来。
 
-　　李潇侣点点头：“我是关照过她，虽然瞒不了人，自家人也不能随便说这些事。”
+　　[李潇侣][y156]点点头：“我是关照过她，虽然瞒不了人，自家人也不能随便说这些事。”
 
 　　“你就没说说自己在家里听到了些什么？比如女仆学校要废校之类的？”
 
@@ -94,7 +94,7 @@ tag: [normal]
 
 　　“奴婢我知道，我知道……”李柒柒惊魂未定，站起来如同竹筒倒豆子一般说起自己大约在43号的茶社里大概说过哪些“不该说的话”。
 
-　　李潇侣越听越生气，她和[萧子山][y001]平日里聊天的只言片语，给这丫头当谈资嚼舌头说出去了不少。幸好她事先打过预防针，总算她和[萧子山][y001]之间的闺闱秘事没给讲出去。
+　　[李潇侣][y156]越听越生气，她和[萧子山][y001]平日里聊天的只言片语，给这丫头当谈资嚼舌头说出去了不少。幸好她事先打过预防针，总算她和[萧子山][y001]之间的闺闱秘事没给讲出去。
 
 　　“除了哪个孙尚香，还有哪些生活秘书和你比较熟，可能听过你说得这些话？”
 
@@ -106,7 +106,7 @@ tag: [normal]
 
 　　“再有，就是茶社的服务员了，她们上茶的时候可能会听到……”
 
-　　“你再好好想想！有没有漏了什么？”李潇侣提醒道，不怒而威。
+　　“你再好好想想！有没有漏了什么？”[李潇侣][y156]提醒道，不怒而威。
 
 　　李柒柒又绞尽脑汁回忆了一些细节，然后回道：“我就记得这么多了。”
 
@@ -116,7 +116,9 @@ tag: [normal]
 
 　　“女人就是爱嚼舌根！”[萧子山][y001]不满的抱怨道。
 
-　　李潇侣不乐意了：“明明是你自己平时不注意，到家就谈工作！本来就是你违背工作纪律在先！”
+　　[李潇侣][y156]不乐意了：“明明是你自己平时不注意，到家就谈工作！本来就是你违背工作纪律在先！”
 
-　　[萧子山][y001]默认不语，眉头拧巴了起来。说起来自己的确是太不注意了。只想到这个家庭除了曹大妈和李潇侣两个“闷葫芦”之外还有个青春活泼的少女。自己明明已经注意到生活秘书中存在着频繁的社交活动，李家的房子又小……自己真是太不注意了！
+　　[萧子山][y001]默认不语，眉头拧巴了起来。说起来自己的确是太不注意了。只想到这个家庭除了[曹大妈][y110]和[李潇侣][y156]两个“闷葫芦”之外还有个青春活泼的少女。自己明明已经注意到生活秘书中存在着频繁的社交活动，李家的房子又小……自己真是太不注意了！
 [y001]: /characters/y001 "萧子山"
+[y110]: /characters/y110 "曹顺花"
+[y156]: /characters/y156 "李潇侣"
